--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -42,6 +42,8 @@
 
 　　我想指出的，就是今天很多人殷殷暢論聖靈的工作及活在聖靈中的真實經歷，但其中一些觀念比對於事實真相，就差不多像我對「大將軍」一名先入為主的臆測一樣。請跟我察看一些有關觀念，讓我表明我說的到底是什麼意思吧！
 
+[[Keep_in_Step_With_the_Spirit__notes.org#認識並經歷神][摘要]]
+
 ** 聖靈的能力
 　　首先，許多人認為聖靈的教義基本上與能力有關，意思是神賜予能力，讓你可以做你應該做卻感有心無力的事情，例如：拒絕物欲的追求（諸如美色、煙、酒、毒品、金錢、刺激、奢華的生活、晉升機會、權力、名望、諂媚奉承等等）。容忍那考驗你耐性的人、愛那不可愛的人、控制脾氣、在壓力中站立得穩、為基督勇敢發言、在遭逢患難中仍信靠神。聖靈賦予人能力達致上述的種種表現，無論在思想上、言語上、講章及禱告裏，這主題都為人所津津樂道。
 
@@ -56,6 +58,8 @@
 
 　　我們是被召去戰勝那惡者，他常以種種形態出現在我們心裏，或圍繞我們。我們需要知道在這一場爭戰裏，只有靠著聖靈的能力，才能獲取勝利；反之，若完全靠賴自己，最後只會發現自己的無能和經驗挫敗，引致痛苦。所以，福音信仰強調藉著聖靈而達致成聖是一件真實而又必需的事，這個教導永遠都切合時宜。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的能力][摘要]]
+
 *** 基督徒的能力
 　　十七世紀時期，清教徒首先強調聖靈如何在人的生命中彰顯能力；可是，到了十八世紀，這種教導竟變成了福音派信徒間爭辯的主題，當時衛斯理（ John Wesley）開始提出一種教義，說聖靈會把人的罪從人心靈中連根拔起。這就是衛斯理所指的「合乎聖經的聖潔」，他相信神興起循道主義（Methodism）去宣揚這個教導。非衛理公會信徒對這種教訓退避踟躕，覺得他很虛妄，而且不合乎聖經，所以他們不斷警告自己教會的會友要防備這種思想。然而到了十九世紀中葉，反對的鐘擺搖晃到了另一個極端；許多人感到（不論他們的想法是否正確）這股反完全主義的熱潮令基督徒完全遺忘了神有能力拯救人脫離罪，他能使人過一個平靜、得勝而公義的生活，他亦能夠使講員的資訊直透人心靈深處。忽然之間，人得勝的能力頓成為講章、書籍和非正式小組討論的話題（他們稱這些小組討論為「閒談聚會」），遍及大西洋兩岸。龐馬（Phoebe Palmer）、馬漢（Asa Mahan）、史密夫（ RobertPearsall Smith）、漢娜·韋杜（ Hannah Whitall Smith）、賀堅斯（ Evan Hopkins）、慕安德列（ Andrew Murray）。叨雷（R．A．Torrey）、特榮布林（ Charles G．Trumbull）。麥奇堅（ Robert C．McQuilkin）、梅亞（F．B．Meyer）、慕耳（H．C.G．Moule）等人所致力宣告的信徒得力「秘訣」（“secret”，這是他們採用的字眼），被高舉為新的啟示。事實上，宣告這些道理的前們也如此相信。一個嶄新的福音信仰運動已經展開了。
 
@@ -65,6 +69,8 @@
 
 　　既然神應允和賜予能力是千真萬確的事，那麼能力的主題如此受到重視，誠然是一件值得欣喜的事。事實上，強調能力的資訊不管透過什麼形式表達出來，今天已成為基督教福音信仰主流的標記，與世界性的靈恩運動並駕齊驅；這無疑是一個對未來充滿希望的徵兆。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#基督徒的能力][摘要]]
+
 *** 能力的限制
 　　然而，在慶倖今天有許多關乎能力的講論之餘，我們也不無憂慮；因為經驗告訴我們，當我們思想聖靈時，若只集中注意能力這個主題，而沒有一個更具深度的觀點，沒有從另一個中心主題去看聖靈的職事，那麼，扭曲的觀念很快就悄悄潛入我們的思想裏。什麼是扭曲了的觀念呢？好，讓我拿以下的例子來開始吧！當一個人經常尋求力量去駕馭生活上的大小事情時，他會虔誠地專注自己心靈的起伏，因而產生一種自我中心和內向的心態，以致對社群的福利和社會的需要漠不關心。當人論及聖靈的工作時，往往傾向於以人為中心，就好像神的能力是一些隨時儲備妥當的東西，只要運用思想和意志——通常美其名為奉獻和信心——就可以開關「使用」（這是凱錫克培靈會的常用語）同時，這種態度形成一種觀念，認為只要我們肯釋放自己內在的能力，神的能力就會在我們心裏自動地運行，因此，我們可以隨時按著自己奉獻和信心的程度來調節這種能力。另一個隨之浮現的觀念，就是以為必須處於內在的被動狀態中，完全等候神的能力帶領我們（「放下自己，讓神工作」是流行得太響的口號）。同樣，在某些圈子的佈道工作裏，差不多形成了一種慣例，就是為心靈空虛的人提供一種「生活的力量」。表面上，就好像只要人肯委身基督，他立刻可以獲得發動和操縱能源的權利。
 
@@ -72,8 +78,12 @@
 
 　　討論下去，你就會漸漸明白我們真正的問題是需要對聖靈的教義有深刻而真確的洞見——這洞見的亮光能促使我們糾正對內在能力的謬說。不過，我打算暫且擱下這部分的論據，待我完成對聖靈問題的初步探討後才再談他。在目前的探討裏，我們只要記著一點，就是只談聖靈能力，根本不能針對問題的核心。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#能力的限制][摘要]]
+
 ** 表現_屬靈恩賜的運用
 　　其次，許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為「……聖靈顯在各人身上……」（林前一二 7），恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#表現_屬靈恩賜的運用][摘要]]
 
 *** 總動員事奉
 　　對於這種觀點——或更貼切地稱為心態，我首先要說明一點，就是他所強調的教本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。曆世以來，教會以為事奉的恩賜只屬於一小部分基督徒專有（例如好的牧師和其他少數人），因此，他們並不十分注意恩賜這個題目。二十世紀以前，有關屬靈恩賜的全面研究，只有一本英文著作，由清教徒歐文（John Owen）於一六七九至一六八 O 年寫成。近期所強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，其實早就應該提出，因為新約聖經對這兩方面的教導是相當清楚和明顯的。這裏引述一些主要經文。
@@ -83,6 +93,8 @@
 　　英文聖經的敘定譯本（King James Version）掩蓋了保羅在此處的含義，把他翻譯為基督所賜的有使徒、先知、傳福音的、牧師和教師，「為了成全聖徒，為要各盡其職，為要建立基督的身體」（“for　the　perfecting　of　the　saints，for thework of ministry， for the edifying of the Body of Christ”［King James Version］）。乍看來，這三句平衡的句語好像都是聖品人員蒙召的職責。第六世紀的聖經版本遺漏了第七條誡命中的不字（出二○14），在歷史中流傳下來，被稱為邪惡的聖經版本；這裏英文聖經欽定譯本在「聖徒」（“saints”）之後加上了一個逗點，也同樣產生不良的效果。因為這個逗號將「職事」的範圍局限了，成為只有在位的領袖才可擔當，這不但隱藏了保羅的意思，簡直將保羅的意思顛倒過來，使本來是肢體各盡其職的成為教權主義（clericalism）。（這裏的「教權主義。是一種陰謀和專橫的結合，在其中，牧者宣稱所有屬靈職事都是他個人的責任，不是會眾的責任，而會眾亦同意這種想法。這個觀念在原則上很有問題，實踐起來更會導致聖靈的感動被銷滅。）
 
 　　其實，自上個世紀中葉開始，普利茅斯弟兄會（ Plymouth Brethren）已宣告恩賜的普及性和肢體應各盡其職，但由於他們的宣告摻雜在一種反動性的爭論裏——當時的論，是針對一些在被指為背離真道的教會裏事奉、受薪並曾受訓練的聖品人員——，們的宣告沒有受到多大注意。可是，近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。其中一個效果，就是許多地區的教會紛紛願意在教會生活中實驗新的制度及新的禮儀形式，讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#總動員事奉][摘要]]
 
 *** 正確地看表現
 　　很不幸，這可喜情況也有其負面：三大扭曲了的現象不時破壞我們認識聖靈的新取向。
@@ -108,6 +120,8 @@
 
 　　我的論點就是任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點，把基督徒的活動和表現看為服事神和榮耀神的途徑，並按這種價值去衡量他們，而不是憑我們的觀感，單單因為某些活動或表現充滿戲劇性、夠搶眼、足以吸引人、能讓人在教會中擔當重要職位，或者使我們對某人的期望提升，就看為寶貴。有關這方面的觀點，我將會在下文討論；目前，讓我們先弄清楚，強調恩賜和活動，跟強調經驗聖靈的能力一樣，都不能領我們進到聖靈真理的核心。讓我們繼續我們的檢討。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#正確地看表現][摘要]]
+
 ** 保守我們純潔
 
 　　第三方面，有些人將聖靈的教義集中在「潔淨」（purifying）和「淨化」（purgation）之上，換句話說，就是神潔淨他的兒女，使他們脫離罪的污染和敗壞，幫助他們抵擋試探，行正義的事。對於這些人來說，聖靈在我們逐漸成聖的過程中，使我們趨向完全，幫助治死我們裏面的罪（羅八 14；另參看西三 5），並改變我們，叫我們「榮上加榮……」（林後三 18）。對他們來說，問題的核心並非經歷聖靈的能力，也在乎基督徒對外的表現，反而是我們內心的爭戰，在追求聖潔的過程中如何對抗罪惡，尋求聖靈的幫助，保守我們純潔，不受玷污。
@@ -132,10 +146,14 @@
 　　
 　　的確，自從革利免（Clement）和俄利根（Origen ）提出清除情欲、淨化靈魂的教導，早期教父記述他們如何頑抗醇酒美人、夜夜笙歌的幻想，以及奥古斯丁用自身的經歷去刻畫罪和恩典的本質以來，信徒不可避免地要與試探對抗的主題就成為基督教靈修教導中一個固定的著重累占。馬丁·路德和加爾文對這方面有很多闡釋，路德宗和加爾文派的信徒，尤其是加爾文派，都緊緊追隨他們的腳蹤。許多世紀以來，不少人曾一次又一次地對這個重點的真確性、現實性和健全性提出質疑與辯論，到如今，已經再沒有什麼見解能認真地挑戰上述重點了。藉著神的恩典，人的生命逐漸被洗滌和潔淨，因此，強調人生掙紮的真實性，是完全合乎聖經和十分恰當的。
 
+[[Keep_in_Step_With_the_Spirit__notes.org#保守我們純潔][摘要]]
+
 *** 道德掙紮教義的陷阱
 　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#道德掙紮教義的陷阱][摘要]]
 
 ** 叫我們醒覺
 　　現在，我們必須探討第四種看法，他認為聖靈的職事基本上就是呈示；簡單來說，就是促使我們醒覺到一些事情。這是泰萊主教（BIShop J．V．Tpylor）的著作《仲介之神》（ The Go-between God）裏面所載的觀點。
@@ -149,6 +167,8 @@
 　　對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊亦很靈巧地建構了一套神學思想。他用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。不過他警誡我們防備自我主義。自我主義與不成熟的思想行為互為因果，往往危害靈恩的精神。泰萊再次表現他的智慧（雖然他所表現的智慧或許並非必需）。他探測那既險且真的道理：人愈趨成熟，聖靈的道德指引便愈有創意，帶領我們超越（當然不是偏離）有聖經根據的正規律例範疇。
 
 　　這些都是真正的灼見。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#叫我們醒覺][摘要]]
 
 *** 泰萊觀點的毛病
 
@@ -189,4 +209,5 @@
 　　若說神的靈永不助人提高醒覺，亦不會透過內心催迫去叫人做某些事情，也不會令未信主的人更欣賞個人的價值，這些說法肯定是錯誤的，我也絕對無意否定聖靈這幾方面的工作，事實上，我甚至會為聖靈這些職事爭辯。可是，今日一般的想法，以為上述其中一項聖靈職事就等於聖靈的主要職事，似乎與事實相去甚遠。其實，自基督來了，聖靈的中心職事是幫助人與基督建立更密切的團契。無疑，因著普通恩典（commongrace），聖靈會在世俗和異教的場合中提高人的辨識力和敏感度，但這從來不是聖靈工作的中心。
 
 　　就拿內在的催迫來說，有些人感到內在的催迫強烈地一再出現，有時候還附以聲音、幻象、異夢等，使他們的感覺更形強烈，驅使他們去強姦、去報復、去傷害人、對兒童進行性侵擾，甚至結束自己的生命。難道這些催迫是出於聖靈的引導嗎？這問題根本不答自明。縈繞心間、擺脫不掉的思想、意念（我們上述所談的，正是這種心神的纏擾）不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。
-　
+
+[[Keep_in_Step_With_the_Spirit__notes.org#追溯我們的思路][摘要]]
