--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -16,6 +16,9 @@
    - [[#叫我們醒覺][叫我們醒覺]]
      - [[#泰萊觀點的毛病][泰萊觀點的毛病]]
    - [[#追溯我們的思路][追溯我們的思路]]
+   - [[#基督的臨在][基督的臨在]]
+     - [[#對神的覺醒][對神的覺醒]]
+   - [[#綱要][綱要]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -125,3 +128,29 @@
 　　縈繞心間、擺脫不掉的思想、意念不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。其實，自基督來了，聖靈的中心職事是幫助人與基督建立更密切的團契。無疑，因著普通恩典（common grace），聖靈會在世俗和異教的場合中提高人的辨識力和敏感度，但這從來不是聖靈工作的中心。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#追溯我們的思路][本文]]
+
+** 基督的臨在
+　　自從使徒行傳第二章五旬節事件以來，聖靈就一直賦予人能力、扶助人、潔淨人，並且引領世世代代的罪人去面對神。聖靈這樣做是要叫人認識基督、愛他、信靠他、尊崇他和讚美他；這是聖靈一貫的目標和目的，也是父神的目標和目的。至終來說，這就是聖靈新約職事的全部內容。
+
+　　聖經中提到，神「與他們同在」，往往是指他賜下祝福的，當然有些時候是指追討罪債，使人們醒悟到他們的行為令他不悅。在新約底下，聖靈那獨特、恒常而又基要的職事，就是在信徒中間體現基督——意思是說，讓他們領會基督與他們同在，作為他們的救主、生命之主和神，也讓他們知道有三件持續的事。
+
+　　首先，聖靈向我們呈示活著的主耶穌，讓我們認識這位元創造主以及這位朋友，好叫我們可以選擇那犧牲的道路，以回應他的愛和呼召。
+
+　　第二，離開人性的自私，踏上像基督的人生道路，去過一種公義、忠心事奉、戰勝罪惡的生活，愈來愈像耶穌。
+
+　　第三，聖靈使我們肯定自己被神所愛、已蒙救贖，使信徒心中綻放出感恩、喜悅、盼望、信心——這就是確據。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#基督的臨在][摘要]]
+
+*** 對神的覺醒
+　　從整本聖經來看，認識神的同在意味著兩重的覺醒。首先，我們醒覺神在那裏：那位客觀地真實存在的創造主；每個人的前途，不論是禍是福，都全在他手裏。第二，我們醒覺到神在這裏，他已經就近我們，對我們說話，鑒察我們，顯露我們的弱點、罪惡和罪咎，使我們降卑，同時又用他的赦免和應許提升我們。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#對神的覺醒][摘要]]
+
+** 綱要
+　　單單思想聖靈在我們生命中的工作，容易變得以人為中心，以經驗作根據，又毫無準則。我們需要進一步探討這些記述如何配合他們對神、他的工作和他的真理的整套觀念。今天能幫助我們活在聖靈中的，並不是一些叫我們向聖靈敞開心懷的勸勉——這方面的勸勉我們已足夠有餘了；反之，我們所缺乏的，是對聖靈工作有一套整全的觀念，能充分瞭解聖靈在教會、小組及個人生命中那自由、不受羈絆及多種形式的運行。
+
+　　聖靈所作的，就是藉著宣告，叫子得榮耀，引導我們作出回應，存崇敬的心去榮耀子，使父的喜樂增加。「聖靈論」（pneumatology）一方面闡釋，父的旨意是要子被認識、被愛、受尊崇、受讚美，並在萬物中居首位；同時另一方面，透過賜下聖靈，子應許與他的子民同在，從今直到永遠。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#綱要][摘要]]
+
