--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -16,6 +16,10 @@
    - [[#叫我們醒覺][叫我們醒覺]]
      - [[#泰萊觀點的毛病][泰萊觀點的毛病]]
    - [[#追溯我們的思路][追溯我們的思路]]
+   - [[#基督的臨在][基督的臨在]]
+     - [[#對神的覺醒][對神的覺醒]]
+   - [[#綱要][綱要]]
+   - [[#注文][注文]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -211,3 +215,68 @@
 　　就拿內在的催迫來說，有些人感到內在的催迫強烈地一再出現，有時候還附以聲音、幻象、異夢等，使他們的感覺更形強烈，驅使他們去強姦、去報復、去傷害人、對兒童進行性侵擾，甚至結束自己的生命。難道這些催迫是出於聖靈的引導嗎？這問題根本不答自明。縈繞心間、擺脫不掉的思想、意念（我們上述所談的，正是這種心神的纏擾）不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。
 
 [[Keep_in_Step_With_the_Spirit__notes.org#追溯我們的思路][摘要]]
+
+** 基督的臨在
+　　現在，讓我們回到實際的基督徒生活圈子去看，在這裏，每個信徒至少朝正確的方向，把聖靈與他們在基督裏的新生命或多或少違絡起來。讓我們再一次發出這個問題：在今天，什麼是聖靈工作的本質、中心和重心？在他賦予人能力、扶助人、潔淨人、向人呈現等工作中，究竟有沒有一樣基本的活動把這些連接起來，讓人充分瞭解他的職事？到底有沒有一個神聖計畫，把聖靈賦予人生命的這幾方面工作聯繫起來，指向一個目標？
+
+　　我認為這計畫是存在的。現在，我會嘗試提出我的見解——我這見解是以臨在的觀念為焦點的。我所指的，就是聖靈在教會及基督徒中間，具體彰顯那位已經復活、掌權的救主，即歷史中的耶穌；這位耶穌就是基督。聖經指出（正如我所堅持的）自從使徒行傳第二章五旬節事件以來，聖靈就一直這樣工作，他賦予人能力、扶助人、潔淨人，並且引領世世代代的罪人去面對神。聖靈這樣做是要叫人認識基督、愛他、信靠他、尊崇他和讚美他；這是聖靈一貫的目標和目的，也是父神的目標和目的。至終來說，這就是聖靈新約職事的全部內容。
+
+　　我在這裏談及的臨在，並非傳統神學所指神的無所不在，這種無所不在的思想，在詩篇一百三十九篇、耶利米書二十三章二十三節、阿摩司書九章二至五節、使徒行傳十七章二十六至二十八節等經文內都有記載，是指神維繫著宇宙萬物的存在及其間的活動，同時覺察每一角落的每一件事。無所不在是一項重要的真理，我現在所要說的亦已假設隱含了這個真理，但在我用臨在一詞之際，我心目中所指的，是一些很不相同的東西。我用這個詞的意思，亦即是聖經作者常用的意思，他們說神與他的子民同在——換句話說，神在特殊的環境中工作，賜福給忠信的子民，使他們認識他的愛，得著他的幫助，從而引發他們對他的敬拜。沒錯，神有些時候會追討罪債，「臨近」人施行審判（如瑪拉基書三章五節的例子），意思是他會作出行動，使人們醒悟到他們的行為令他不悅，事實上他現在仍不斷作這些審判；不過，通常當聖經描述神就近他的子民、與他們同在的時候，往往是指他賜下祝福的。
+
+　　聖經中的用語通常是神「與他們同在」。「耶和華與他［約瑟」同在，他就百事順利。」——正如丁道爾（Tyndale）所說，他是個「幸運的寵兒」（創三九 2）。摩西想到要回埃及去就驚恐，因為在那裏他是個通緝犯；他也恐懼要公然對抗法老。神說：「我必與你同在」——這個應許是要驅走摩西內心一切的恐懼（出三 12，另參看三三 14—16）。摩西離世後，約書亞繼承領導重任，神向他重複這相同的應許：「……我怎樣與摩西同在，也必照樣與你同在；……你當剛強壯膽！……因為你無論往哪里去，耶和華你的神必與你同在。」（書一 5、9；另參看申三一 6、8）堅固以色列民信心的，也是這相同的應許：「你從水中經過，我必與你同在；……不要害怕，因我與你同在……」（賽四三 2、5）。馬太在他的福音書裏，一開始就提到神與他的子民同在、賜福給他們：他宣稱耶穌的出生應驗了以賽亞先知以馬內利的預言（以馬內利翻出來的意思就是「神與我們同在」）。並且在馬大福音的結尾，他也記錄了耶穌為一切願意使人作他門徒的跟隨者所賜下的應許：「……我就常與你們同在……」（太一 23，二八 30）。因為耶穌——救恩的賜予者——就是道成肉身的神，基督的同在正是神的同在。
+
+　　事實是這樣的。在新約底下，聖靈那獨特、恒常而又基要的職事，就是在信徒中間體現基督——意思是說，讓他們領會基督與他們同在，作為他們的救主、生命之主和神，也讓他們知道有三件持續的事。
+
+　　首先，是與耶穌的契合：就是與耶穌密交的、敬虔的生活。縱然耶穌現在已不再以形體在地上顯現，而是坐在天上榮耀的寶座上，但昔日耶穌受難前與第一批門徒在巴勒斯坦的密交生活，今天也可以成為信徒的實在經歷。（這正是呈示的意念：聖靈向我們呈示活著的主耶穌，讓我們認識這位元創造主以及這位朋友，好叫我們可以選擇那犧牲的道路，以回應他的愛和呼召。）
+
+　　第二，品格開始更新，愈來愈像耶穌。當信徒以耶穌為模範和力量、敬拜他、學習為他和其他人有所付出甚至舍己的時候，更新便開始。（這裏正好跟「能力」、「表現」、「潔淨」等主題吻合，他們全都顯出何謂離開人性的自私，踏上像基督的人生道路，去過一種公義、忠心事奉、戰勝罪惡的生活。）
+
+　　第三，聖靈使我們肯定自己被神所愛、已蒙救贖，並藉著基督被接納進入天父家裏，因此我們能夠成為「神的後嗣，和基督同作後嗣」（羅八 17）；這種肯定，使信徒心中綻放出感恩、喜悅、盼望、信心——一言以蔽之，這就是確據。（這一點正好幫助我們瞭解許多基督徒信主後的顛峰經驗。耶穌在約翰福音十四章二十一至二十三節應許聖父和聖子要住在我們裏面，這應許藉著聖靈得以實現，為要給我們更大的確據。）這些經驗正好顯明聖靈讓我們認識到基督臨在——借用戴利仁（Samuel Terrien）的描述；這是：「虛幻、難以捉摸、不可預告、不受規限、不能用經驗來證實、外面看不見而內在卻無可抗拒的」11。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#基督的臨在][摘要]]
+
+*** 對神的覺醒
+　　從整本聖經來看，認識神的同在意味著兩重的覺醒。首先，我們醒覺神在那裏：那位客觀地真實存在的創造主、掌管宇宙之主、萬物的主宰和所有存於時空之物的原動力；每個人的前途，不論是禍是福，都全在他手裏。第二，我們醒覺到神在這裏，他已經就近我們，對我們說話，質詢我們，鑒察我們，顯露我們的弱點、罪惡和罪咎，使我們降卑，同時又用他的赦免和應許提升我們。在神啟示自己是「蘊含三位」（“three－personed”）（套用但思「John Donne」的說法）之前，人只知道有一位神臨在。可是，現在透過道成肉身的啟示和新約聖經裏的啟迪，有關神的知識已變成了有關聖父、聖子和聖靈的知識；認識神的同在變成了因著聖靈的工作與聖子相遇及相交，並藉著聖子與聖父相交。故此，認識基督的同在，就是在自己時面找到這份對神的雙重覺醒，覺察到他既真實又接近；同時，這種醒覺圍繞著那位來自加利利的人，也就是多馬親口呼喊為「我的主！我的神！」（約二 O28）的那一位。保羅寫道：「那吩咐光從黑暗裏照出來的神，已經照在我們心裏，叫我們得知神榮耀的光顯在耶穌基督的面上。」（林後四6）他所描述的，正是這種對神的認識。
+
+　　自五旬節以來，聖靈特殊的職事是體現基督，這是新納聖經明顯的資訊。正如許多解經家常常指出，聖靈常被視為神的兒子耶穌基督的靈（徒一六 7；羅八 9；加四 6；腓一 19；彼前一 11）。那居於我們心裏的靈，正是那位降臨在耶穌身上，並住在他裏面的靈（路三 22，四 1、14、18，一 O21；約一 32，三 34；徒一 038）。耶穌擁有聖靈，也是賜下聖靈者（約一 33，一五 26，一六 7，二 O22，另參看七 37—39；徒二 33；約壹二20、27）。耶穌被提後，離開門徒，聖靈便臨到門徒身上；這實際上相當於耶穌回到他們當中（約一四 16、18 一 21）。聖經形容神的靈（也就是基督的靈）住在我們心裏為基督在我們心裏（參羅八 9 一 11），正如論到那被高舉的基督所親自宣告的資訊時，就說是「聖靈向眾教會所說的話」一樣（參啟二 1、7、8、11、12、17、18、29，三1、6、7、13、14、22）。
+
+　　再者，保羅在哥林多後書三章十六節寫道：「但他們的心幾時歸向主，帕子「蒙蔽心靈的」就幾時除去了。」這句話是出埃及記三十四章三十四節的迴響，其中記述摩西如何在與神說話時揭去帕子。）然後保羅繼續寫道：
+
+　　主（即上一節經文所述的主）就是那靈（故此，「歸向主」的意思就是「承當這新約的執事，不是憑著字句，乃是憑著聖靈「請參閱第六節 1）；主（耶穌）的靈在哪里，哪里就得以自由。我們眾人既然敞著臉得以看見（或作反照：兩種譯法都可以，而且同具真確的意義）主的（耶穌的）榮光，好像從鏡子裏返照，就變成主的形狀，榮上加榮，如同從主的靈變成的。（林後三 17、18）
+
+　　這些經文所表達的，並不如一些人所想，以為新約聖經作者看不見聖子和聖靈有什麼清晰的區別，其實新約聖經作者看見聖靈在五旬節後的工作主要是讓我們體會那坐在寶座上的基督的同在、話語和作為；只有掌握這基本的新約角度，我們才能清楚認識聖靈。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#對神的覺醒][摘要]]
+
+** 綱要
+　　本書認定聖靈受託去體現基督，以這個真理作為瞭解聖靈多面職事的線索。在我看來，現時許多對聖靈工作的綜覽，都未能循這途徑把資料綜合起來，這是他們的缺點。一個表面化的記述，單指出聖靈在新約時期如何被彰顯，以及新約作者怎樣述說這些表彰是不足夠的，我們需要進一步探討這些記述如何配合他們對神、他的工作和他的真理的整套觀念——換句話說，就是他們的整套神學思想——，因為缺乏這方面的探討是一個致命傷，使我們思想聖靈在我們生命中的工作時，變得以人為中心，以經驗作根據，又毫無準則。難怪許多有關聖靈的著述，本來可以是十分精彩的，卻沒有如期望中叫讀者得著幫助，讀者亦不如他們想像中那般獲益。因為今天能幫助我們活在聖靈中的，並不是一些叫我們向聖靈敞開心懷的勸勉——這方面的勸勉我們已足夠有餘了；反之，我們所缺乏的，是對聖靈工作全面而通達的神學透視，好讓我們有一套整全的觀念，能充分瞭解聖靈在教會、小組及個人生命中那自由、不受羈絆及多種形式的運行（聖靈這方面的工作是今日基督教所強調的）。新納聖經所論述有關聖靈的主要真理，是聖靈體現基督的臨在和相交；我希望循這個概念去發展出通達的神學觀點，希望至少能勾畫出一個綱領。
+
+　　在聖經的基礎上，我的目標和觀點可以這樣表達：耶穌在他被賣的那一夜，述說有關聖靈的事：「他要榮耀我……」（約一六 14），意思就是「他將要使我在人的眼中得榮耀，使他們覺察到那本屬於我的榮耀，並且在我通過十字架、復活和升天回到父那裏去，坐在我國度的寶座上時，這榮耀將更大。」這個關於聖靈從前是什麼，現今又奉差遣來做什麼的基本定義（正如我一直認為的），給我們一個完整透徹而具方向性的參照標準，我們必須透過他整體去看聖靈的新約職事，否則我們很難充分瞭解聖靈職事的任何一部分。
+
+　　然後，耶穌繼續說這榮耀將要如何成就，「因為他要將受於我的，告訴你們。」耶穌說「受於我的」是什麼意思呢？他的話至少有這個含義：「一切關於我的事實和真理，就是道成肉身、是天父的同工——創造萬物、眷顧神的子民和賜下恩典，又是這世界正式的君主，即是那位掌管宇宙萬物的主人［參一七 2］。不管人們是否承認我這一切，事實卻是如此。」不過，當然他還有這樣的含義：「一切關於我的事實和真理：我是你神聖的愛人、你的中保、你的新約保證人、你的先知、祭司和君王，又是把你從罪咎和罪惡的權勢、世界的敗壞及魔鬼的掌握中拯救出來的救主，並且是你的牧人、良人、朋友、你的生命、你的盼望、你信仰的創始成終者、你個人生命歷史的主，將來要帶領你與我同在，分享我的榮耀。所以，我是你的道路和你的獎賞。」故此，因著我與你彼此的關係，「受於我的」也就是「受於你的」了。
+
+　　我的童年屬於低唱抒情歌的年代，記得當時有一首民謠，名為「你的一切」（“All the Things You Are”），歌曲結尾是這樣的：「……有一天，我將會認識那神聖的一刻，那時候，你的一切也成了我的一切。」聖靈說服我們相信耶穌在他榮耀裏的一切都是為我們預備的，藉此讓我們看見耶穌的榮耀。套用保羅在哥林多前書二章七節的說法，是「使我們得榮耀」——認識這個真理比輕歌淺唱的浪漫時刻更神聖。
+
+　　耶穌說：「他要……告訴你們。」這個「你們」是單指使徒還是所有與他們一起的基督徒呢？主要是指使徒而言：他們得著這些真理的直接啟示。但其次亦是指所有信徒：透過使徒口傳或筆錄的見證，聖靈會教導眾信徒認識同樣的真理。使徒必須與神的眾子民分享他們屬靈的領受，昔日如此，今天亦然。
+
+　　第十五節有如一個注腳。為了不讓上一句話我的一詞所涉及的整個範疇和含義遭忽略，耶穌繼續說道：「凡父所有的，都是我的，所以我說，他要將受於我的告訴你們。」加上這句注腳，是為了防備一些可能產生的誤解，避免人以為父神和他的工作比耶穌本人及其工作更超越，又或者（反過來說）父的屬性、宣稱、能力、計畫、展望和榮耀都比耶穌的更偉大，更廣遠。「凡父所有的，都是我的」；子和父是平等的；父的旨意是「……叫人都尊敬子如同尊敬父一樣……」（約五 23）最終來說，一切基督徒真實信仰、敬拜和實踐，都建立在這神聖的目標上。
+
+　　在以下的篇章裏，我會從上述的角度嘗試解釋聖靈的職事。我會指出聖靈如何使父的喜樂增加，他所作的，就是藉著宣告，叫子得榮耀，引導我們作出回應，存崇敬的心去榮耀子。我始終堅持所有對聖靈多方面工作的解說——或者套用一個專門術語：「聖靈論」（pneumatology）——都需要從以下立場去闡釋：一方面，父的旨意是要子被認識、被愛、受尊崇、受讚美，並在萬物中居首位；同時另一方面，透過賜下聖靈，子應許與他的子民同在，從今直到永遠。除此以外，沒有一種解說能完全合乎基督教精神。我計畫在本書裏，指出在一套純正基督教聖靈論裏的一些主要成分；因此我的闡述會一貫地建基於約翰福音十四章十六至二十三節及十六章十四、十五節中耶穌所親自表達的思想上，而不會在他們以外另找基礎。我希望這樣的綱要是可接受的，並且我相信這是今天所需要的。我現在就循此路線去探討。
+　　
+[[Keep_in_Step_With_the_Spirit__notes.org#綱要][摘要]]
+
+** 注文
+　　1 Steven Barabas，So Great Salvation（London：Marshall， Morgan＆Scott，1952），p．v．這本書提供一個對凱錫克信念的詳盡分析。另參考
+J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConvention（London： Hodder＆ Stoughton，1964）。
+　　2“‘Keswlck’ and the Reformed Doctrine of sanctification，” Evangelieal Quarterly，27，No．3（1955 年 7 月）：第 153 一 167 頁。請看當時編者 F．F．Bruce 的評論，“In Retrospect：　　Remembrance of Things Past，”（Grand Rapids：Eerdmans，1980），第 187、 188 頁。
+　　3 John Owens， Wods， ed． W． Goold（London： Banner of 們 Truth，1967),4：437．我們可以爭辯說，新約聖經列出的屬靈恩賜包括了性情上的質素，是歐文著重理智的分析所沒有的，然而這亦不影響他所講述有關語言方面恩賜的真理。
+　　4 John V，Taylor，The Go－Between God（New York：Oxford　University Press，1979），第 212 頁。
+　　5 同上，第 102 頁。
+　　6 同上，第 58—62 頁。
+　　7 同上，第 241 頁。
+　　8 Emil Brunner，Revelation and Reason（Philadelphia： West-minster，1946），第265 頁。
+　　9 Taylor，第 191 一 197 頁。
+　　10  Anglican Article 20．
+　　11 Samuel，Terrlen， The Elusive Presence：Towards a New　Biblical Theo1ogy（San Francisco： Harper＆ Row， 1978），第 457 頁。
+
+
