--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -28,7 +28,8 @@
 
 　　無數罪人在他們對耶穌和聖靈尚未有正確的認識時，就已經真實地經歷耶穌基督的救恩和聖靈使生命更新的能力。儘管如此，我們若對聖靈有較清晰的觀念，就更能欣賞聖靈的工作，以及避免墮入一些錯謬的陷阱。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#認識並經歷神][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#認識並經歷神][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 聖靈的能力
 　　許多人認為聖靈的教義基本上與能力有關，意思是神賜予能力，讓你可以做你應該做卻感有心無力的事情。容忍那考驗你耐性的人、愛那不可愛的人、控制脾氣、在壓力中站立得穩、為基督勇敢發言、在遭逢患難中仍信靠神。聖靈賦予人能力達致上述的種種表現，無論在思想上、言語上、講章及禱告裏，這主題都為人所津津樂道。
@@ -39,7 +40,8 @@
 
 　　我們是被召去戰勝那惡者，他常以種種形態出現在我們心裏，或圍繞我們。我們需要知道在這一場爭戰裏，只有靠著聖靈的能力，才能獲取勝利；反之，若完全靠賴自己，最後只會發現自己的無能和經驗挫敗，引致痛苦。所以，福音信仰強調藉著聖靈而達致成聖是一件真實而又必需的事，這個教導永遠都切合時宜。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#聖靈的能力][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#聖靈的能力][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 基督徒的能力
 　　十七世紀時期，清教徒首先強調聖靈如何在人的生命中彰顯能力；到了十八世紀，衛斯理（John Wesley）開始提出一種教義，說聖靈會把人的罪從人心靈中連根拔起。這就是衛斯理所指的「合乎聖經的聖潔」。非衛理公會信徒對這種教訓退避踟躕，覺得他很虛妄，而且不合乎聖經，所以他們不斷警告自己教會的會友要防備這種思想。然而到了十九世紀中葉；許多人感到這股反完全主義的熱潮令基督徒完全遺忘了神有能力拯救人脫離罪，他能使人過一個平靜、得勝而公義的生活，他亦能夠使講員的資訊直透人心靈深處。忽然之間，人得勝的能力頓成為講章、書籍和非正式小組討論的話題。一個嶄新的福音信仰運動已經展開了。
@@ -48,7 +50,8 @@
 
 　　這種講論能力的主題也不是近年唯一的發展。基督的能力不單能夠赦免我們的罪，而且藉著聖靈，可拯救我們脫離罪惡的奴役。有如第一世紀一樣，這個資訊已再次成為教會福音資訊的主要部分。較古老的福音資訊，由於他強調律法、罪惡、審判和基督代贖受死的榮耀，誠然可以補充今天福音資訊的缺欠。可是整體來說，古老的福音資訊很少論及能力；既然神應允和賜予能力是千真萬確的事，那麼能力的主題如此受到重視，誠然是一件值得欣喜的事。事實上，強調能力的資訊不管透過什麼形式表達出來，今天已成為基督教福音信仰主流的標記，與世界性的靈恩運動並駕齊驅；
 
-[[Keep_in_Step_With_the_Spirit__orig.org#基督徒的能力][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#基督徒的能力][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 能力的限制
 　　經驗告訴我們，當我們思想聖靈時，若只集中注意能力這個主題，而沒有一個更具深度的觀點，沒有從另一個中心主題去看聖靈的職事，那麼，扭曲的觀念很快就悄悄潛入我們的思想裏。
@@ -59,11 +62,13 @@
 
 　　所以只談聖靈能力，根本不能針對問題的核心。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#能力的限制][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#能力的限制][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 表現_屬靈恩賜的運用
 
-[[Keep_in_Step_With_the_Spirit__orig.org#表現_屬靈恩賜的運用][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#表現_屬靈恩賜的運用][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 *** 總動員事奉
 　　許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為恩賜是藉著行為以辨認的，基督徒所表現出來的行為，正顯明神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
@@ -72,7 +77,8 @@
 
 　　近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#總動員事奉][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#總動員事奉][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 *** 正確地看表現
 　　很不幸，這可喜情況也有其負面。過分強調平信徒的職事，令一些平信徒忘記要尊重牧者的職分和領導。也看不見另一個事實，就是教會生活中最重要的恩賜（如講道、教導、領導、輔導、支持）通常是一些被聖化了的天然才能。這些毛病不過是一些不受歡迎的副產品。原則本身是正確的，若不能切實遵守這些原則，就不可能有高質素的教會生活。
@@ -84,7 +90,8 @@
 
 　　在整本新約聖經裏，每逢提及神在人生命中的工作，著眼點往往是倫理道德，而不是靈恩方面的。那真正要緊的是活像基督（不是在恩賜上像基督，而是在愛心、謙卑、順服神的旨意、對別人的需要敏感等各方面像他）。任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#正確地看表現][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#正確地看表現][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 保守我們純潔
 　　有些人將聖靈的教義集中在「潔淨」（purifying）和「淨化」（purgation）之上。對他們來說，問題的核心並非經歷聖靈的能力，也非在乎基督徒對外的表現，反而是我們內心的爭戰，在追求聖潔的過程中如何對抗罪惡，尋求聖靈的幫助，保守我們純潔，不受玷污。
@@ -95,14 +102,16 @@
 
 　　活在聖靈中的基督徒，會不斷發現他的生命尚未達致本來應有的美善；他經常要面對重重障礙和限制，以及自己扭曲的天性背道而馳的拉扯，他正在打一場前所未有的硬仗；同時，即使是他最好的行為，也不免犯上動機上的罪；他亦發現他每日的生活充滿汙點，他必須每時每刻仰賴神在基督裏的赦罪恩典，否則他就會在罪中失喪；同時，他也認識到自己心靈的軟弱和善變，需要經常求告聖靈賜給他力量，使他在這場內在的鬥爭中能堅持到底。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#保守我們純潔][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#保守我們純潔][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 *** 道德掙紮教義的陷阱
 　　經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，沒有喜樂，終日內省，陷溺於懊悔自己心靈的腐朽，滋長出灰暗冷漠的人生觀。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，一些內向的教會文化和社群，都可以導致上述的情況。聖靈認識不足，也經常是一個原因。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#道德掙紮教義的陷阱][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#道德掙紮教義的陷阱][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 叫我們醒覺
 　　第四種看法，認為聖靈的職事基本上就是呈示，就是促使我們醒覺到一些事情。
@@ -113,11 +122,13 @@
 
 　　因此，泰萊一方面強調每個人在神面前的獨特性（醒覺是屬於個人的事情），另一方面，他的整體取向始終以小組、教會和社區作主導。對於「自發和出於超理性反應」的靈息表現——表現在醫治、方言，尤其是預言的恩賜上——，泰萊用全人的觀念去解釋這些表現：人不是只懂得作理性分析；整個人的各方面都是聖靈工作的範疇。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#叫我們醒覺][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#叫我們醒覺][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 *** 泰萊觀點的毛病
 
-[[Keep_in_Step_With_the_Spirit__orig.org#泰萊觀點的毛病][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#泰萊觀點的毛病][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 追溯我們的思路
 
@@ -127,7 +138,8 @@
 
 　　縈繞心間、擺脫不掉的思想、意念不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。其實，自基督來了，聖靈的中心職事是幫助人與基督建立更密切的團契。無疑，因著普通恩典（common grace），聖靈會在世俗和異教的場合中提高人的辨識力和敏感度，但這從來不是聖靈工作的中心。
 
-[[Keep_in_Step_With_the_Spirit__orig.org#追溯我們的思路][本文]]
+[[Keep_in_Step_With_the_Spirit__orig.org#追溯我們的思路][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 基督的臨在
 　　自從使徒行傳第二章五旬節事件以來，聖靈就一直賦予人能力、扶助人、潔淨人，並且引領世世代代的罪人去面對神。聖靈這樣做是要叫人認識基督、愛他、信靠他、尊崇他和讚美他；這是聖靈一貫的目標和目的，也是父神的目標和目的。至終來說，這就是聖靈新約職事的全部內容。
@@ -140,17 +152,19 @@
 
 　　第三，聖靈使我們肯定自己被神所愛、已蒙救贖，使信徒心中綻放出感恩、喜悅、盼望、信心——這就是確據。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#基督的臨在][摘要]]
+[[Keep_in_Step_With_the_Spirit__orig.org#基督的臨在][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 *** 對神的覺醒
 　　從整本聖經來看，認識神的同在意味著兩重的覺醒。首先，我們醒覺神在那裏：那位客觀地真實存在的創造主；每個人的前途，不論是禍是福，都全在他手裏。第二，我們醒覺到神在這裏，他已經就近我們，對我們說話，鑒察我們，顯露我們的弱點、罪惡和罪咎，使我們降卑，同時又用他的赦免和應許提升我們。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#對神的覺醒][摘要]]
+[[Keep_in_Step_With_the_Spirit__orig.org#對神的覺醒][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 ** 綱要
 　　單單思想聖靈在我們生命中的工作，容易變得以人為中心，以經驗作根據，又毫無準則。我們需要進一步探討這些記述如何配合他們對神、他的工作和他的真理的整套觀念。今天能幫助我們活在聖靈中的，並不是一些叫我們向聖靈敞開心懷的勸勉——這方面的勸勉我們已足夠有餘了；反之，我們所缺乏的，是對聖靈工作有一套整全的觀念，能充分瞭解聖靈在教會、小組及個人生命中那自由、不受羈絆及多種形式的運行。
 
 　　聖靈所作的，就是藉著宣告，叫子得榮耀，引導我們作出回應，存崇敬的心去榮耀子，使父的喜樂增加。「聖靈論」（pneumatology）一方面闡釋，父的旨意是要子被認識、被愛、受尊崇、受讚美，並在萬物中居首位；同時另一方面，透過賜下聖靈，子應許與他的子民同在，從今直到永遠。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#綱要][摘要]]
-
+[[Keep_in_Step_With_the_Spirit__orig.org#綱要][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
