--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -31,6 +31,8 @@
 
 　　好了，我現在要清楚指出我寫這些篇章的目的。正如我已經說過，今天聖靈大受注目，眾人所關注的，是他的身分，以及他在個人、教會及社群中做些什麼工作。團契、肢體生活。總動員事奉、聖靈的洗、恩賜、神的引導、預言、神跡，以及聖靈的啟示、更新和復興工作等題目，都常常掛在許多人的嘴邊，也在許多書本中討論過。這誠然是好的，我們應該為此感到快樂；反之，若然我們沒有討論這些題目，可能反映出我們在屬靈方面出了問題。然而正如近視漢看不清眼前的景物一樣，又好比任何人都會在一些事情上捉錯用神，對事物的真相只知其一，不知其二，因此，我們雖然經常頌揚聖靈的工作，但往往未能按聖經認識聖靈。對屬靈的事物，我們真個是濛濛眼，大受自己的偏見左右，以致我們沒法看得清楚。
 
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 認識並經歷神
 　　我們很容易作出如此的假定：既然我們認識聖靈在我們生命中的一些作為，我們就已經完全認識聖靈。很抱歉，結論並不是這樣。事實上，正如一個人的概念知識可以遠超過他的屬靈經驗，同樣，屬靈經驗也可以走在概念知識的前頭。相信聖經的人經常強調需要有正確的概念知識，以致他們忽略了上述的情形。但事實確是如此，耶穌門徒的經驗就是很好的例子。耶穌在世上的時候，門徒追隨他，但他們對屬靈事物的理解常有錯漏，而且經常對耶穌有許多誤解；可是，耶穌能夠超越他們思想上的限制，感動他們、改變他們的生命，純粹是由於他們愛他、信靠他，希望從他身上學習，誠心願意追隨他們心中的亮光去服從他。因此，十二個門徒中有十一個「已經乾淨了」（意思是他們的罪得赦免，心靈獲得更新「約一五 3」），並且得與其他人一起進入耶穌恕宥和平安的恩典中（參路五 20 一 24，七 47—50，一九 5 一 10），而那時他們尚未能掌握耶穌釘十架的贖罪意義。神首先賜下救恩的禮物，改變他們的生命，其後他們才明白這是什麼一回事。
 
@@ -46,7 +48,8 @@
 
 　　我想指出的，就是今天很多人殷殷暢論聖靈的工作及活在聖靈中的真實經歷，但其中一些觀念比對於事實真相，就差不多像我對「大將軍」一名先入為主的臆測一樣。請跟我察看一些有關觀念，讓我表明我說的到底是什麼意思吧！
 
-[[Keep_in_Step_With_the_Spirit__notes.org#認識並經歷神][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#認識並經歷神][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 聖靈的能力
 　　首先，許多人認為聖靈的教義基本上與能力有關，意思是神賜予能力，讓你可以做你應該做卻感有心無力的事情，例如：拒絕物欲的追求（諸如美色、煙、酒、毒品、金錢、刺激、奢華的生活、晉升機會、權力、名望、諂媚奉承等等）。容忍那考驗你耐性的人、愛那不可愛的人、控制脾氣、在壓力中站立得穩、為基督勇敢發言、在遭逢患難中仍信靠神。聖靈賦予人能力達致上述的種種表現，無論在思想上、言語上、講章及禱告裏，這主題都為人所津津樂道。
@@ -62,7 +65,8 @@
 
 　　我們是被召去戰勝那惡者，他常以種種形態出現在我們心裏，或圍繞我們。我們需要知道在這一場爭戰裏，只有靠著聖靈的能力，才能獲取勝利；反之，若完全靠賴自己，最後只會發現自己的無能和經驗挫敗，引致痛苦。所以，福音信仰強調藉著聖靈而達致成聖是一件真實而又必需的事，這個教導永遠都切合時宜。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的能力][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#聖靈的能力][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 基督徒的能力
 　　十七世紀時期，清教徒首先強調聖靈如何在人的生命中彰顯能力；可是，到了十八世紀，這種教導竟變成了福音派信徒間爭辯的主題，當時衛斯理（ John Wesley）開始提出一種教義，說聖靈會把人的罪從人心靈中連根拔起。這就是衛斯理所指的「合乎聖經的聖潔」，他相信神興起循道主義（Methodism）去宣揚這個教導。非衛理公會信徒對這種教訓退避踟躕，覺得他很虛妄，而且不合乎聖經，所以他們不斷警告自己教會的會友要防備這種思想。然而到了十九世紀中葉，反對的鐘擺搖晃到了另一個極端；許多人感到（不論他們的想法是否正確）這股反完全主義的熱潮令基督徒完全遺忘了神有能力拯救人脫離罪，他能使人過一個平靜、得勝而公義的生活，他亦能夠使講員的資訊直透人心靈深處。忽然之間，人得勝的能力頓成為講章、書籍和非正式小組討論的話題（他們稱這些小組討論為「閒談聚會」），遍及大西洋兩岸。龐馬（Phoebe Palmer）、馬漢（Asa Mahan）、史密夫（ RobertPearsall Smith）、漢娜·韋杜（ Hannah Whitall Smith）、賀堅斯（ Evan Hopkins）、慕安德列（ Andrew Murray）。叨雷（R．A．Torrey）、特榮布林（ Charles G．Trumbull）。麥奇堅（ Robert C．McQuilkin）、梅亞（F．B．Meyer）、慕耳（H．C.G．Moule）等人所致力宣告的信徒得力「秘訣」（“secret”，這是他們採用的字眼），被高舉為新的啟示。事實上，宣告這些道理的前們也如此相信。一個嶄新的福音信仰運動已經展開了。
@@ -73,7 +77,8 @@
 
 　　既然神應允和賜予能力是千真萬確的事，那麼能力的主題如此受到重視，誠然是一件值得欣喜的事。事實上，強調能力的資訊不管透過什麼形式表達出來，今天已成為基督教福音信仰主流的標記，與世界性的靈恩運動並駕齊驅；這無疑是一個對未來充滿希望的徵兆。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#基督徒的能力][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#基督徒的能力][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 能力的限制
 　　然而，在慶倖今天有許多關乎能力的講論之餘，我們也不無憂慮；因為經驗告訴我們，當我們思想聖靈時，若只集中注意能力這個主題，而沒有一個更具深度的觀點，沒有從另一個中心主題去看聖靈的職事，那麼，扭曲的觀念很快就悄悄潛入我們的思想裏。什麼是扭曲了的觀念呢？好，讓我拿以下的例子來開始吧！當一個人經常尋求力量去駕馭生活上的大小事情時，他會虔誠地專注自己心靈的起伏，因而產生一種自我中心和內向的心態，以致對社群的福利和社會的需要漠不關心。當人論及聖靈的工作時，往往傾向於以人為中心，就好像神的能力是一些隨時儲備妥當的東西，只要運用思想和意志——通常美其名為奉獻和信心——就可以開關「使用」（這是凱錫克培靈會的常用語）同時，這種態度形成一種觀念，認為只要我們肯釋放自己內在的能力，神的能力就會在我們心裏自動地運行，因此，我們可以隨時按著自己奉獻和信心的程度來調節這種能力。另一個隨之浮現的觀念，就是以為必須處於內在的被動狀態中，完全等候神的能力帶領我們（「放下自己，讓神工作」是流行得太響的口號）。同樣，在某些圈子的佈道工作裏，差不多形成了一種慣例，就是為心靈空虛的人提供一種「生活的力量」。表面上，就好像只要人肯委身基督，他立刻可以獲得發動和操縱能源的權利。
@@ -82,12 +87,14 @@
 
 　　討論下去，你就會漸漸明白我們真正的問題是需要對聖靈的教義有深刻而真確的洞見——這洞見的亮光能促使我們糾正對內在能力的謬說。不過，我打算暫且擱下這部分的論據，待我完成對聖靈問題的初步探討後才再談他。在目前的探討裏，我們只要記著一點，就是只談聖靈能力，根本不能針對問題的核心。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#能力的限制][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#能力的限制][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 表現_屬靈恩賜的運用
 　　其次，許多人認為聖靈的教義基本上與表現有關，意思是運用屬靈恩賜。對這些人來說，聖靈的職事似乎由始至終只是關乎如何運用恩賜——講道、教導、說預言、說方言、醫治等等。他們認為根據新約聖經的教導，恩賜（charismata）是神所賜予的某些能力，尤其是藉著言語、行為和態度，把關乎耶穌基督的真理傳遞開去，彼此激勵，互相服事。他們又認為「……聖靈顯在各人身上……」（林前一二 7），恩賜是藉著行以辨認的，基督徒所表現出來的行為，正顯明瞭神賜予他們什麼能力。因此，他們認為屬靈生命的實質在乎表現，同時假設人愈能表現恩賜，就表示他愈被聖靈充滿。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#表現_屬靈恩賜的運用][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#表現_屬靈恩賜的運用][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 總動員事奉
 　　對於這種觀點——或更貼切地稱為心態，我首先要說明一點，就是他所強調的教本身同樣是絕對正確的；這次是強調恩賜的實在，以及運用恩賜的重要。曆世以來，教會以為事奉的恩賜只屬於一小部分基督徒專有（例如好的牧師和其他少數人），因此，他們並不十分注意恩賜這個題目。二十世紀以前，有關屬靈恩賜的全面研究，只有一本英文著作，由清教徒歐文（John Owen）於一六七九至一六八 O 年寫成。近期所強調屬靈恩賜的普遍性，以及神對教會總動員事奉的期望，其實早就應該提出，因為新約聖經對這兩方面的教導是相當清楚和明顯的。這裏引述一些主要經文。
@@ -98,7 +105,8 @@
 
 　　其實，自上個世紀中葉開始，普利茅斯弟兄會（ Plymouth Brethren）已宣告恩賜的普及性和肢體應各盡其職，但由於他們的宣告摻雜在一種反動性的爭論裏——當時的論，是針對一些在被指為背離真道的教會裏事奉、受薪並曾受訓練的聖品人員——，們的宣告沒有受到多大注意。可是，近年來普世教聯運動和靈恩運動都抓緊這方面的聖經真理，使之漸漸成為基督教的老生常談，因而產生了一些可喜的效果。其中一個效果，就是許多地區的教會紛紛願意在教會生活中實驗新的制度及新的禮儀形式，讓信徒有機會完全發揮他們的恩賜，令會眾整體受益；隨之興起的，是以一種認真的態度，去檢討傳統的崇拜程式和形式，以保障沒有任何恩賜受到窒礙，甚至銷滅聖靈的感動。這一切都是好現象。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#總動員事奉][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#總動員事奉][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 正確地看表現
 　　很不幸，這可喜情況也有其負面：三大扭曲了的現象不時破壞我們認識聖靈的新取向。
@@ -124,7 +132,8 @@
 
 　　我的論點就是任何把屬靈恩賜（奔走和辦事的能力和意願）看為比屬靈果子（在個人生命中像基督的品格）更重要的心態，在屬靈上都是方向錯誤的，需要矯正。最佳的矯正良藥就是重新調校我們對聖靈工作的觀點，把基督徒的活動和表現看為服事神和榮耀神的途徑，並按這種價值去衡量他們，而不是憑我們的觀感，單單因為某些活動或表現充滿戲劇性、夠搶眼、足以吸引人、能讓人在教會中擔當重要職位，或者使我們對某人的期望提升，就看為寶貴。有關這方面的觀點，我將會在下文討論；目前，讓我們先弄清楚，強調恩賜和活動，跟強調經驗聖靈的能力一樣，都不能領我們進到聖靈真理的核心。讓我們繼續我們的檢討。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#正確地看表現][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#正確地看表現][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 保守我們純潔
 
@@ -150,14 +159,16 @@
 　　
 　　的確，自從革利免（Clement）和俄利根（Origen ）提出清除情欲、淨化靈魂的教導，早期教父記述他們如何頑抗醇酒美人、夜夜笙歌的幻想，以及奥古斯丁用自身的經歷去刻畫罪和恩典的本質以來，信徒不可避免地要與試探對抗的主題就成為基督教靈修教導中一個固定的著重累占。馬丁·路德和加爾文對這方面有很多闡釋，路德宗和加爾文派的信徒，尤其是加爾文派，都緊緊追隨他們的腳蹤。許多世紀以來，不少人曾一次又一次地對這個重點的真確性、現實性和健全性提出質疑與辯論，到如今，已經再沒有什麼見解能認真地挑戰上述重點了。藉著神的恩典，人的生命逐漸被洗滌和潔淨，因此，強調人生掙紮的真實性，是完全合乎聖經和十分恰當的。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#保守我們純潔][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#保守我們純潔][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 道德掙紮教義的陷阱
 　　即使這樣，經驗告訴我們，當信徒以道德掙紮作為他們思想聖靈的重點時，常會被許多陷阱圍繞。他們會漸漸變成律法主義者，常常為自己和別人定下嚴格的規例，好讓自己對不相干的事情毫不染指，又給自己和別人強加一些呆板並約束性的行為模式，作為抵抗屬世潮流的堡壘，並且大大強調遵守這些人為禁忌的重要。他們的行事為人愈來愈像法利賽人，注重提防那能污染人的事情，以及毫不妥協地堅守原則，多於注重實踐基督的愛；他們變得小題大造，對於沒有真正構成威脅的事物，他們亦毫無理由地懼怕受到污染，又頑固地不肯安心；他們變得沒有喜樂，因為盤據他們腦海的，儘是這場屬靈戰爭如何冷酷無情的思想；他們變成病態的人，終日內省，陷溺於懊悔自己心靈的腐朽，久而久之，滋長出灰暗冷漠的人生觀；他們對於道德成長的可能性感到悲觀，不單看自己如此，看別人也是如此；他們對於脫離罪惡，不敢存什麼厚望，最大的希望只不過是不會比以前更糟。這種種態度可說是屬靈的神經衰弱症，他們歪曲、損害並削弱聖靈使人成聖的工作，因此實際上使聖靈在我們生命中的工作蒙上汙點。
 
 　　我明白這些心態通常是累積了種種因素構成的，諸如天生的性情、早年的教育和訓練，以及因害羞或缺乏安全感而形成的吹毛求疵習慣、低下的自我形象，甚至或者真正的自我憎厭，都往往是一些成因；此外，一些內向的教會文化和社群，都可以導致上述的情況。只不過，現在我想指出的，就是對聖靈認識不足，也經常是一個原因。一如我們剛才討論到的其他兩類人一樣，這類人需要從另一個觀點認識聖靈，從上述我所描寫的那種灰暗、自我中心的屬靈狀況中擺脫出來。一會兒，我就會指出什麼是我所認為的正確觀點了。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#道德掙紮教義的陷阱][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#道德掙紮教義的陷阱][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 叫我們醒覺
 　　現在，我們必須探討第四種看法，他認為聖靈的職事基本上就是呈示；簡單來說，就是促使我們醒覺到一些事情。這是泰萊主教（BIShop J．V．Tpylor）的著作《仲介之神》（ The Go-between God）裏面所載的觀點。
@@ -172,7 +183,8 @@
 
 　　這些都是真正的灼見。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#叫我們醒覺][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#叫我們醒覺][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 泰萊觀點的毛病
 
@@ -202,6 +214,8 @@
 
 　　在泰萊的聖靈觀裏，聖靈是一位居間的聖者，他的工作是呈露現實、驅使人作出抉擇，及喚起人以犧牲作回應。前面所述絕不是批評泰萊這個中心思想。要找出能令我們瞭解聖靈一直以來在信徒生命中職事的新約主要思想，並不需要遠超泰萊卻步之處。他帶領了我們，雖不中亦不遠。
 
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
 ** 追溯我們的思路
 
 　　先讓我們回顧一下所走過的思路。
@@ -214,7 +228,8 @@
 
 　　就拿內在的催迫來說，有些人感到內在的催迫強烈地一再出現，有時候還附以聲音、幻象、異夢等，使他們的感覺更形強烈，驅使他們去強姦、去報復、去傷害人、對兒童進行性侵擾，甚至結束自己的生命。難道這些催迫是出於聖靈的引導嗎？這問題根本不答自明。縈繞心間、擺脫不掉的思想、意念（我們上述所談的，正是這種心神的纏擾）不一定源自神；撒但同樣精於製造使人擺脫不了的衝動，正如他能操縱並加強那些發自我們扭曲了的天性的衝動一樣。故此，對於一些突如其來佔據心神的思想，我們必須仔細檢討（最好是請教別人）然後才下結論，斷定他們是否從神的靈而來。其實，這些思想纏擾心神，叫人擺脫不了，已顯示出他們多半不是源於神的靈了。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#追溯我們的思路][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#追溯我們的思路][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 基督的臨在
 　　現在，讓我們回到實際的基督徒生活圈子去看，在這裏，每個信徒至少朝正確的方向，把聖靈與他們在基督裏的新生命或多或少違絡起來。讓我們再一次發出這個問題：在今天，什麼是聖靈工作的本質、中心和重心？在他賦予人能力、扶助人、潔淨人、向人呈現等工作中，究竟有沒有一樣基本的活動把這些連接起來，讓人充分瞭解他的職事？到底有沒有一個神聖計畫，把聖靈賦予人生命的這幾方面工作聯繫起來，指向一個目標？
@@ -233,7 +248,8 @@
 
 　　第三，聖靈使我們肯定自己被神所愛、已蒙救贖，並藉著基督被接納進入天父家裏，因此我們能夠成為「神的後嗣，和基督同作後嗣」（羅八 17）；這種肯定，使信徒心中綻放出感恩、喜悅、盼望、信心——一言以蔽之，這就是確據。（這一點正好幫助我們瞭解許多基督徒信主後的顛峰經驗。耶穌在約翰福音十四章二十一至二十三節應許聖父和聖子要住在我們裏面，這應許藉著聖靈得以實現，為要給我們更大的確據。）這些經驗正好顯明聖靈讓我們認識到基督臨在——借用戴利仁（Samuel Terrien）的描述；這是：「虛幻、難以捉摸、不可預告、不受規限、不能用經驗來證實、外面看不見而內在卻無可抗拒的」11。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#基督的臨在][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#基督的臨在][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 對神的覺醒
 　　從整本聖經來看，認識神的同在意味著兩重的覺醒。首先，我們醒覺神在那裏：那位客觀地真實存在的創造主、掌管宇宙之主、萬物的主宰和所有存於時空之物的原動力；每個人的前途，不論是禍是福，都全在他手裏。第二，我們醒覺到神在這裏，他已經就近我們，對我們說話，質詢我們，鑒察我們，顯露我們的弱點、罪惡和罪咎，使我們降卑，同時又用他的赦免和應許提升我們。在神啟示自己是「蘊含三位」（“three－personed”）（套用但思「John Donne」的說法）之前，人只知道有一位神臨在。可是，現在透過道成肉身的啟示和新約聖經裏的啟迪，有關神的知識已變成了有關聖父、聖子和聖靈的知識；認識神的同在變成了因著聖靈的工作與聖子相遇及相交，並藉著聖子與聖父相交。故此，認識基督的同在，就是在自己時面找到這份對神的雙重覺醒，覺察到他既真實又接近；同時，這種醒覺圍繞著那位來自加利利的人，也就是多馬親口呼喊為「我的主！我的神！」（約二 O28）的那一位。保羅寫道：「那吩咐光從黑暗裏照出來的神，已經照在我們心裏，叫我們得知神榮耀的光顯在耶穌基督的面上。」（林後四6）他所描述的，正是這種對神的認識。
@@ -246,7 +262,8 @@
 
 　　這些經文所表達的，並不如一些人所想，以為新約聖經作者看不見聖子和聖靈有什麼清晰的區別，其實新約聖經作者看見聖靈在五旬節後的工作主要是讓我們體會那坐在寶座上的基督的同在、話語和作為；只有掌握這基本的新約角度，我們才能清楚認識聖靈。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#對神的覺醒][摘要]]
+[[Keep_in_Step_With_the_Spirit__notes.org#對神的覺醒][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 綱要
 　　本書認定聖靈受託去體現基督，以這個真理作為瞭解聖靈多面職事的線索。在我看來，現時許多對聖靈工作的綜覽，都未能循這途徑把資料綜合起來，這是他們的缺點。一個表面化的記述，單指出聖靈在新約時期如何被彰顯，以及新約作者怎樣述說這些表彰是不足夠的，我們需要進一步探討這些記述如何配合他們對神、他的工作和他的真理的整套觀念——換句話說，就是他們的整套神學思想——，因為缺乏這方面的探討是一個致命傷，使我們思想聖靈在我們生命中的工作時，變得以人為中心，以經驗作根據，又毫無準則。難怪許多有關聖靈的著述，本來可以是十分精彩的，卻沒有如期望中叫讀者得著幫助，讀者亦不如他們想像中那般獲益。因為今天能幫助我們活在聖靈中的，並不是一些叫我們向聖靈敞開心懷的勸勉——這方面的勸勉我們已足夠有餘了；反之，我們所缺乏的，是對聖靈工作全面而通達的神學透視，好讓我們有一套整全的觀念，能充分瞭解聖靈在教會、小組及個人生命中那自由、不受羈絆及多種形式的運行（聖靈這方面的工作是今日基督教所強調的）。新納聖經所論述有關聖靈的主要真理，是聖靈體現基督的臨在和相交；我希望循這個概念去發展出通達的神學觀點，希望至少能勾畫出一個綱領。
@@ -262,8 +279,9 @@
 　　第十五節有如一個注腳。為了不讓上一句話我的一詞所涉及的整個範疇和含義遭忽略，耶穌繼續說道：「凡父所有的，都是我的，所以我說，他要將受於我的告訴你們。」加上這句注腳，是為了防備一些可能產生的誤解，避免人以為父神和他的工作比耶穌本人及其工作更超越，又或者（反過來說）父的屬性、宣稱、能力、計畫、展望和榮耀都比耶穌的更偉大，更廣遠。「凡父所有的，都是我的」；子和父是平等的；父的旨意是「……叫人都尊敬子如同尊敬父一樣……」（約五 23）最終來說，一切基督徒真實信仰、敬拜和實踐，都建立在這神聖的目標上。
 
 　　在以下的篇章裏，我會從上述的角度嘗試解釋聖靈的職事。我會指出聖靈如何使父的喜樂增加，他所作的，就是藉著宣告，叫子得榮耀，引導我們作出回應，存崇敬的心去榮耀子。我始終堅持所有對聖靈多方面工作的解說——或者套用一個專門術語：「聖靈論」（pneumatology）——都需要從以下立場去闡釋：一方面，父的旨意是要子被認識、被愛、受尊崇、受讚美，並在萬物中居首位；同時另一方面，透過賜下聖靈，子應許與他的子民同在，從今直到永遠。除此以外，沒有一種解說能完全合乎基督教精神。我計畫在本書裏，指出在一套純正基督教聖靈論裏的一些主要成分；因此我的闡述會一貫地建基於約翰福音十四章十六至二十三節及十六章十四、十五節中耶穌所親自表達的思想上，而不會在他們以外另找基礎。我希望這樣的綱要是可接受的，並且我相信這是今天所需要的。我現在就循此路線去探討。
-　　
-[[Keep_in_Step_With_the_Spirit__notes.org#綱要][摘要]]
+
+[[Keep_in_Step_With_the_Spirit__notes.org#綱要][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 ** 注文
 　　1 Steven Barabas，So Great Salvation（London：Marshall， Morgan＆Scott，1952），p．v．這本書提供一個對凱錫克信念的詳盡分析。另參考
@@ -279,4 +297,4 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　10  Anglican Article 20．
 　　11 Samuel，Terrlen， The Elusive Presence：Towards a New　Biblical Theo1ogy（San Francisco： Harper＆ Row， 1978），第 457 頁。
 
-
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
