--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -19,6 +19,11 @@
    - [[#基督的臨在][基督的臨在]]
      - [[#對神的覺醒][對神的覺醒]]
    - [[#綱要][綱要]]
+ - [[#2_聖經裏的聖靈][2_聖經裏的聖靈]]
+   - [[#屬靈恩賜][屬靈恩賜]]
+     - [[#什麼是屬靈恩賜？][什麼是屬靈恩賜？]]
+     - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
+     - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -168,3 +173,30 @@
 
 [[Keep_in_Step_With_the_Spirit__orig.org#綱要][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+* 2_聖經裏的聖靈
+
+** 屬靈恩賜
+
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+*** 什麼是屬靈恩賜？
+　　我們說恩賜從聖靈而來，然而我們仍舊認為恩賜是「才幹」，或者是超自然的新穎技倆。我們尚未習慣以教會的元首基督及他目前從天上在我們當中進行的工作來給恩賜下定義。保羅或其他新約聖經作者，都沒有為我們界定何謂屬靈恩賜，但保羅聲稱運用恩賜能使人得著造就，這正好反映出他對恩賜的看法。在保羅看來，造就是對基督並與他有關的各方面有愈來愈深入和豐富的認識，而個人與他的關係更漸趨完美。因此，我們給屬靈恩賜下的定義，必須以基督為根據。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#什麼是屬靈恩賜][什麼是屬靈恩賜連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+*** 屬靈恩賜的運用
+　　我們運用屬靈恩賜，無非是基督藉著他的身體去事奉他的身體，事奉天父，事奉全人類。基督從天上使用基督徒作為他的嘴、他的手、他的腳，甚至他的笑容；他藉著我們——他的子民——此時在世上說話、行動、與人相會、去愛和拯救若其他基督徒給我們諒解和鼓勵，在我們有需要的時候幫助我們，無論採用什麼形式，其實都是基督親自工作，透過他們帶給我們這些益處。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#屬靈恩賜的運用][屬靈恩賜的運用連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+*** 恩賜帶來的祝福
+　　恩賜（chartsmata）的定義，是表彰基督的能力表現。惟有那些被神使用去造就信徒的能力，才稱得上是恩賜。當我們說基督徒有恩賜時，意思並不是說他們在什麼方面顯赫出眾或很有效率，而是神已經很明顯地使用他們某方面的能力來造就人。這使我們確信他將來也會繼續這樣使用他們。我們需要把人辦事的能力和神賜福的特權清楚劃分，因為構成恩賜的，是我們的才能被神使用，而不是才能本身。若然我們所作的不能經常為他人或自己帶來可辨認的屬靈益處，我們便不要將自己處事的能力誤以為屬靈恩賜。
+
+　　不可以單單憑表現來界定恩賜（charisma），恩賜的定義必需包括神與人的關係，神在基督裏透過恩賜建立信徒；否則，即使所謂「恩賜」在形式上與真正屬靈能力的彰顯一模一樣，也只能算是屬肉體而不是屬靈能力的彰顯。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#恩賜帶來的祝福][恩賜帶來的祝福連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
