--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -20,6 +20,11 @@
      - [[#對神的覺醒][對神的覺醒]]
    - [[#綱要][綱要]]
    - [[#注文][注文]]
+ - [[#2_聖經裏的聖靈][2_聖經裏的聖靈]]
+   - [[#屬靈恩賜][屬靈恩賜]]
+     - [[#什麼是屬靈恩賜？][什麼是屬靈恩賜？]]
+     - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
+     - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -297,4 +302,41 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　10  Anglican Article 20．
 　　11 Samuel，Terrlen， The Elusive Presence：Towards a New　Biblical Theo1ogy（San Francisco： Harper＆ Row， 1978），第 457 頁。
 
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+* 2_聖經裏的聖靈
+
+** 屬靈恩賜
+　　在第一章裏，我討論過一些關於屬靈恩賜的問題，在這裏我們需要更詳盡地探討這問題。
+
+　　保羅強調屬靈恩賜是惠及所有基督徒的，因此基督身體裏的總動員事奉應該成為各教會的法則；近年來，這種思想普遍被接受了，我們應該為此高興。千多年來，大多數教會陷入教權主義的掌握中（衛理公會團體、普利茅斯弟兄會和救世軍等受人尊敬的組織除外），總動員事奉的思想是向好的一大轉變。雖然今天很多教會的平信徒仍處於被動狀態，許多神職人員仍舊助長這種狀況，因為他們害怕受到其他思想的威脅，然而這主流見解已經轉移，從前平信徒的事奉只屬於那些特別熱心的信徒，現在，平信徒事奉成為實踐門徒生命一個必需的部分。從前向信徒發出挑戰，要他們認識自己的恩賜和尋找自己事奉的職事，似乎只是屬於虔誠的抗辯宗溫室裏栽培出來的奇花異卉；但這種觀念現已轉變了。羅馬書十二章三至十三節、哥林多前書十二章和以弗所書四章七至十五節等經文中的有力論點，現在已普遍被接受了；今時今日，天主教與抗辯宗、自由派與保守派、靈恩派、普世派和各宗派的福音派信徒，均一致贊成每個基督徒都擁有恩賜，在教會整體的事奉裏各有自己的責任。這真是好消息啊！
+
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+*** 什麼是屬靈恩賜？
+　　可是，我們對恩賜的想法十分膚淺。不錯，我們說恩賜從聖靈而來（保羅稱之為「聖靈的彰顯」，見林前一二 4—11）然而我們仍舊認為恩賜是「才幹」（即能夠運用純熟技巧，將事情辦得圓滿妥當的能力），或者是超自然的新穎技倆（說方言、醫治、直接從神領受資訊以傳給別人等等能力）。我們尚未習慣以教會的元首基督及他目前從天上在我們當中進行的工作來給恩賜下定義；就這方面看來，我們還沒有按著聖經真理去思想恩賜的問題。保羅在哥林多前書的開始，為信徒感謝神：「……因神在基督耶穌裏所賜給你們的恩惠；又因你們在他裏面凡事富足，口才、知識都全備，……以致你們在恩賜上（charisma ）沒有一樣不及人的……」林前一 4、5、7）保羅的話明確指出恩賜是在基督裏所賜的，是從基督而來的富足。哥林多前書十二章所論述的，是假設讀者已肯定了第一章四至七節所確立以基督為本的觀點。我們先看清楚這一點是很重要的，否則，我們就會把天生才幹與屬靈恩賜混淆，始終分不清。
+
+　　保羅或其他新約聖經作者，都沒有為我們界定何謂屬靈恩賜，但保羅聲稱運用恩賜能使人得著造就（即「建立」，林前一四 3—5、12、26，另參一七章；弗四 12、16），這正好反映出他對恩賜的看法。對保羅而言，只有藉著基督、在基督裏、效法基督及回應基督，人方可得著造就。「造就」一詞的意義傳到後世變得較為通俗，比保羅的原意寬鬆得多；在保羅看來，造就是對基督並與他有關的各方面有愈來愈深入和豐富的認識，而個人與他的關係更漸趨完美；除此以外再無別的含義了。因此，我們給屬靈恩賜下的定義，必須以基督為根據：是某些能力的具體表現，藉行動或言語去表達、頌贊、展現及傳揚基督；在此以外再沒有造就可言。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#什麼是屬靈恩賜][什麼是屬靈恩賜連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+*** 屬靈恩賜的運用
+　　我們應當留意，一般來說，我們時常將「尋常」與「不尋常」的恩賜，或「自然」與「超自然」的恩賜作含糊不清的劃分，但在這兩組恩賜之上，還有更進一步的劃分：語言的恩賜及樂善好施的恩賜（即對他人肉身和物質上的需要作出友愛的幫助）。在羅馬書十二章六至八節裏，保羅談論恩賜時，在這兩類恩賜之間跳來跳去。他列舉的恩賜中，第—、第三和第四項，是關於說預言、教導及勸慰，屬於言語的恩賜；而第二、第五、第六和第七項，是關於服事（diakonia）、將財物分贈、領導和行善，都屬於樂善好施的恩賜。縱使這兩類恩賜在形式上極不相同，但從保羅的表達方式看來，我們應該曉得，對保羅來說兩者並沒有終極的神學分歧。
+
+　　在這裏，我們必須掌握一個真理，我們運用屬靈恩賜，無非是基督藉著他的身體去事奉他的身體，事奉天父，事奉全人類。基督從天上使用基督徒作為他的嘴、他的手、他的腳，甚至他的笑容；他藉著我們——他的子民——此時在世上說話、行動、與人相會、去愛和拯救人。這似乎是（雖然有人持不同意見）保羅對教會作為基督身體的描繪的部分意義。在這個身體裏，信徒是肢體，即四肢或器官：頭是全身的指揮中心，肢體隨從頭的指揮行動。
+
+　　保羅對以弗所教會及其他地方的信徒這樣寫道：「（基督）來傳和平的福音給你們遠處的人……」（弗二 17；我認為以弗所書是一封傳閱的書信，以弗所教會是其中一個傳閱的目的地。）基督怎可以這樣做呢？他並非靠自己複後的身體去做，而是靠著像保羅這些信徒運用他賜予他們講道和教導的恩賜。同樣，保羅給腓立比信徒寫道：「我的神必照他榮耀的豐富，在基督耶穌裏，使你們一切所需用的都充足。」（腓四 19）神又怎可以這樣做呢？至少，有部分是藉著基督透過聖靈工作，賜予腓立比信徒樂善好施的恩賜。信徒奉基督的名彼此教導（參帖後三 6），也因著他們是基督徒而彼此關懷（參可九 41），這樣，基督便透過他們親自賜下祝福。對於關懷的實踐，基督曾經明確地指出：「……這些事你們既作在我這弟兄中一個最小的身上，就是作在我身上了。」（太二五 40）因此我們或可以同樣明確地表示，若其他基督徒給我們諒解和鼓勵，在我們有需要的時候幫助我們，無論採用什麼形式，其實都是基督親自工作，透過他們帶給我們這些益處（參林後一三 3；羅一五 18）。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#屬靈恩賜的運用][屬靈恩賜的運用連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+*** 恩賜帶來的祝福
+　　我給恩賜（chartsmata）的定義，是表彰基督的能力表現。以某種獨特方式去講或做的能力——我們或許稱之為「表現」的能力——並不是恩賜，惟有那些被神使用去造就信徒的能力，才稱得上是恩賜。有時候，神永不會使用一些與生俱來的才幹去造就人，但有時神又偏會使用一些被人判斷為不及水準的表現去造就人。這是一貫的特色：神顯明他所拯救和使用的人的軟弱，不讓任何東西勝過或遮蓋他的榮耀（林前一 27 一 29；林後四 7，另參一二 9）。因此，當我們說基督徒有恩賜時（羅一二 6），意思並不是說他們在什麼方面顯赫出眾或很有效率（或許是，或許不是，各人表現都不同），而是神已經很明顯地使用他們某方面的能力來造就人。這使我們確信他將來也會繼續這樣使用他們。我們需要把人辦事的能力和神賜福的特權清楚劃分，因為構成恩賜的，是我們的才能被神使用，而不是才能本身。若然我們所作的不能經常為他人或自己帶來可辨認的屬靈益處，我們便不要將自己處事的能力誤以為屬靈恩賜。
+
+　　最初司布真教牧學院（C．H．Spurgeons PastorsCollege）的入學手續就採納了這項原則，候取生需要提供資料，證明他們曾經擔任講道和教導的工作，並曾使人蒙福；若缺乏這些證據，儘管申請人有多大的才能，都會被視為缺乏牧者恩賜，而拒絕接受申請。
+
+　　五旬節派及靈恩派信徒宣稱神在他們當中重新興起新約時代的所謂表記恩賜（sign gifts；如說方言、翻方言、說預言和醫治）。我稍後將會在本書討論到我為什麼不接受這樣的宣稱；但現在即使假設我的觀點錯誤，他們的說法真確，我的原則仍舊適用，一如適用於有教導和行政技巧的基督徒身上。說方言及按手治病的能力，很可能在教會內外都同樣找到——我想事實上確是如此；這些能力不一定是屬靈恩賜，因為你不可以單單憑表現來界定恩賜（charisma），恩賜的定義必需包括神與人的關係，神在基督裏透過恩賜建立信徒；否則，即使所謂「恩賜」在形式上與真正屬靈能力的彰顯一模一樣，也只能算是屬肉體而不是屬靈能力的彰顯。有些從前是五旬節派或靈恩派的信徒告訴我們，他們發現以往說方言的能力是屬肉體的，我們大可同意他們的體會，而無需下結論評定所有說方言的恩賜都是如此。那構成及界定什麼是「恩賜」（charisma）的，並非行動的形式，而是神的賜福。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#恩賜帶來的祝福][恩賜帶來的祝福連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
