--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -21,7 +21,7 @@
    - [[#綱要][綱要]]
  - [[#2_聖經裏的聖靈][2_聖經裏的聖靈]]
    - [[#屬靈恩賜][屬靈恩賜]]
-     - [[#什麼是屬靈恩賜？][什麼是屬靈恩賜？]]
+     - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
 
@@ -180,7 +180,7 @@
 
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
-*** 什麼是屬靈恩賜？
+*** 什麼是屬靈恩賜
 　　我們說恩賜從聖靈而來，然而我們仍舊認為恩賜是「才幹」，或者是超自然的新穎技倆。我們尚未習慣以教會的元首基督及他目前從天上在我們當中進行的工作來給恩賜下定義。保羅或其他新約聖經作者，都沒有為我們界定何謂屬靈恩賜，但保羅聲稱運用恩賜能使人得著造就，這正好反映出他對恩賜的看法。在保羅看來，造就是對基督並與他有關的各方面有愈來愈深入和豐富的認識，而個人與他的關係更漸趨完美。因此，我們給屬靈恩賜下的定義，必須以基督為根據。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#什麼是屬靈恩賜][什麼是屬靈恩賜連結]]　　　
