--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -22,7 +22,7 @@
    - [[#注文][注文]]
  - [[#2_聖經裏的聖靈][2_聖經裏的聖靈]]
    - [[#屬靈恩賜][屬靈恩賜]]
-     - [[#什麼是屬靈恩賜？][什麼是屬靈恩賜？]]
+     - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
 
@@ -313,7 +313,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
-*** 什麼是屬靈恩賜？
+*** 什麼是屬靈恩賜
 　　可是，我們對恩賜的想法十分膚淺。不錯，我們說恩賜從聖靈而來（保羅稱之為「聖靈的彰顯」，見林前一二 4—11）然而我們仍舊認為恩賜是「才幹」（即能夠運用純熟技巧，將事情辦得圓滿妥當的能力），或者是超自然的新穎技倆（說方言、醫治、直接從神領受資訊以傳給別人等等能力）。我們尚未習慣以教會的元首基督及他目前從天上在我們當中進行的工作來給恩賜下定義；就這方面看來，我們還沒有按著聖經真理去思想恩賜的問題。保羅在哥林多前書的開始，為信徒感謝神：「……因神在基督耶穌裏所賜給你們的恩惠；又因你們在他裏面凡事富足，口才、知識都全備，……以致你們在恩賜上（charisma ）沒有一樣不及人的……」林前一 4、5、7）保羅的話明確指出恩賜是在基督裏所賜的，是從基督而來的富足。哥林多前書十二章所論述的，是假設讀者已肯定了第一章四至七節所確立以基督為本的觀點。我們先看清楚這一點是很重要的，否則，我們就會把天生才幹與屬靈恩賜混淆，始終分不清。
 
 　　保羅或其他新約聖經作者，都沒有為我們界定何謂屬靈恩賜，但保羅聲稱運用恩賜能使人得著造就（即「建立」，林前一四 3—5、12、26，另參一七章；弗四 12、16），這正好反映出他對恩賜的看法。對保羅而言，只有藉著基督、在基督裏、效法基督及回應基督，人方可得著造就。「造就」一詞的意義傳到後世變得較為通俗，比保羅的原意寬鬆得多；在保羅看來，造就是對基督並與他有關的各方面有愈來愈深入和豐富的認識，而個人與他的關係更漸趨完美；除此以外再無別的含義了。因此，我們給屬靈恩賜下的定義，必須以基督為根據：是某些能力的具體表現，藉行動或言語去表達、頌贊、展現及傳揚基督；在此以外再沒有造就可言。
