--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -318,7 +318,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　保羅或其他新約聖經作者，都沒有為我們界定何謂屬靈恩賜，但保羅聲稱運用恩賜能使人得著造就（即「建立」，林前一四 3—5、12、26，另參一七章；弗四 12、16），這正好反映出他對恩賜的看法。對保羅而言，只有藉著基督、在基督裏、效法基督及回應基督，人方可得著造就。「造就」一詞的意義傳到後世變得較為通俗，比保羅的原意寬鬆得多；在保羅看來，造就是對基督並與他有關的各方面有愈來愈深入和豐富的認識，而個人與他的關係更漸趨完美；除此以外再無別的含義了。因此，我們給屬靈恩賜下的定義，必須以基督為根據：是某些能力的具體表現，藉行動或言語去表達、頌贊、展現及傳揚基督；在此以外再沒有造就可言。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#什麼是屬靈恩賜][什麼是屬靈恩賜連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#什麼是屬靈恩賜][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 屬靈恩賜的運用
@@ -328,7 +328,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　保羅對以弗所教會及其他地方的信徒這樣寫道：「（基督）來傳和平的福音給你們遠處的人……」（弗二 17；我認為以弗所書是一封傳閱的書信，以弗所教會是其中一個傳閱的目的地。）基督怎可以這樣做呢？他並非靠自己複後的身體去做，而是靠著像保羅這些信徒運用他賜予他們講道和教導的恩賜。同樣，保羅給腓立比信徒寫道：「我的神必照他榮耀的豐富，在基督耶穌裏，使你們一切所需用的都充足。」（腓四 19）神又怎可以這樣做呢？至少，有部分是藉著基督透過聖靈工作，賜予腓立比信徒樂善好施的恩賜。信徒奉基督的名彼此教導（參帖後三 6），也因著他們是基督徒而彼此關懷（參可九 41），這樣，基督便透過他們親自賜下祝福。對於關懷的實踐，基督曾經明確地指出：「……這些事你們既作在我這弟兄中一個最小的身上，就是作在我身上了。」（太二五 40）因此我們或可以同樣明確地表示，若其他基督徒給我們諒解和鼓勵，在我們有需要的時候幫助我們，無論採用什麼形式，其實都是基督親自工作，透過他們帶給我們這些益處（參林後一三 3；羅一五 18）。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#屬靈恩賜的運用][屬靈恩賜的運用連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#屬靈恩賜的運用][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 *** 恩賜帶來的祝福
@@ -338,5 +338,5 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　五旬節派及靈恩派信徒宣稱神在他們當中重新興起新約時代的所謂表記恩賜（sign gifts；如說方言、翻方言、說預言和醫治）。我稍後將會在本書討論到我為什麼不接受這樣的宣稱；但現在即使假設我的觀點錯誤，他們的說法真確，我的原則仍舊適用，一如適用於有教導和行政技巧的基督徒身上。說方言及按手治病的能力，很可能在教會內外都同樣找到——我想事實上確是如此；這些能力不一定是屬靈恩賜，因為你不可以單單憑表現來界定恩賜（charisma），恩賜的定義必需包括神與人的關係，神在基督裏透過恩賜建立信徒；否則，即使所謂「恩賜」在形式上與真正屬靈能力的彰顯一模一樣，也只能算是屬肉體而不是屬靈能力的彰顯。有些從前是五旬節派或靈恩派的信徒告訴我們，他們發現以往說方言的能力是屬肉體的，我們大可同意他們的體會，而無需下結論評定所有說方言的恩賜都是如此。那構成及界定什麼是「恩賜」（charisma）的，並非行動的形式，而是神的賜福。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#恩賜帶來的祝福][恩賜帶來的祝福連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#恩賜帶來的祝福][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
