--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -25,6 +25,7 @@
      - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
+ - [[#6_聖靈的路徑：解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -340,3 +341,21 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 [[Keep_in_Step_With_the_Spirit__notes.org#恩賜帶來的祝福][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+* 6_聖靈的路徑：解釋聖靈生活
+
+　　現在，我們來到一個主要的問題，是我們一直為他開山辟路的。對於獨特的靈恩經驗，我們應該以怎樣的神學觀點去看他呢？即是說，我們怎樣以神的概念來解釋他呢？當他們自稱他們的屬靈經驗比其他人更加超越的時候，我們應該怎樣看聖靈在他們身上的作為呢？事實上，這是靈恩運動向我們提出的一個主要問題。可是，我一方面可從其中心的信念及倫理上的果子而得出結論，認定神在他們中間，另方面，又發現「靈恩派」和「非靈恩派」的屬靈氣質比我們有時候所在意到的更加相近；這樣，我令到這個問題更加難以解答。倘若靈恩社群中的典型屬靈經驗是沒有基督在其中、沒有愛心和驕傲自負的，那麼，我們的疑問就不會出現，因為我們根本沒有理由將這些經驗歸功於聖靈；可是靈恩運動的情況正好並非這樣，那麼，這個問題就來得更加尖銳，且無法逃避了。因為我們必需面對一個事實，靈息運動用以解釋其自稱擁有的特色的一個最普遍宣告的神學觀念，是十分不合乎聖經的。
+
+　　對於一個看自己為復興真正基督徒經驗的力量的運動，這個事實引起的問題肯定是顯然易見的。經驗是一個含糊的字眼，而種種經驗（即是思想與感情的特殊狀況）落在不全然被聖化的罪人身上，必然如同雜貪混在黃金裏。沒有任何經驗單憑這經驗的發生本身就可證實是從神而來，為要推展他恩典的作為。基督徒擁有的經驗，不一定就是基督徒經驗。一個經驗若是出於神恩典的賜予，他在聖經真理的試驗下，必能證明在其中心有一種加強了的醒覺——對於關乎神的一些啟示的真理的醒覺，以及對於我們作為受造物、罪人、受益人、信徒、養子、被買贖的僕人，及在其他各種身分下與神的關係，有強烈的醒覺。我們曾經以這個標準去量度靈恩派經驗，也發現他們在這一點上沒有缺失。可是，當這些經驗被用來印證某些誤解聖經的信念時——時常有人這樣做——，我們就只剩下兩個選擇：一是排斥這些經驗，看這些經驗為虛妄的，甚至可能源於撒但，否則，就重新給他們神學上的闡釋，表明這些經驗實際證實和確定的真理，與靈恩信徒所以為的有所不同。至少對於靈恩見證的主流，這是我們現在要作的抉擇。
+
+　　有些人注意到靈恩經驗宣稱要證實的東西是錯誤的，他們採取頭一個立場，迅速批評這運動是虛妄和危險的。可是，想起有時候（並非經常如此）靈恩派信徒提出他們那些錯誤的主張時那種自嗚得意的態度，又天真幼稚地誤用聖經，而最令人懊喪的是，許多靈恩派的發言人，似乎對於真理的問題漠不關心，凡此種種，我們又不能完全譴責那些對靈恩運動口誅筆伐的人。我承認我也是其中一個受到靈恩運動衍生上述種種現象所困擾的人，不過，無論如何，我從靈恩經驗裏看見神在其中工作，因此，我大膽作出第二個選擇——就是嘗試重新建構其神學觀念。我在這個選擇上所作的，請讀者評斷。
+
+　　首先，讓我們流覽一下傳統五旬節派對靈恩經驗的說明，這是大部分在德國以外的抗辯宗靈恩派信徒所持守的看法。這就是我曾經稱之為復還論的觀點，他們將使徒行傳第二章所形容門徒在五旬節的經驗，以及哥林多前書十二至十四章所形容哥林多教會的經驗，看為今日基督徒應該追求的標準規範、理想和目標。這觀點的中心建立在一種靈洗的觀念上，他們認為靈洗是「一種特殊的經驗，有別於信主經驗，通常在信主後才有的。在這經驗裏，人領受了全部的聖靈進入他的生命中，因此滿有力量去事奉和見證。」1 他們認為除非信徒經歷聖靈的洗，否則欠缺神早已為他儲備的必需資源，所以，他們命令基督徒尋求這種經驗，直到得著為止。2 這經驗一旦臨到，他就被提升，而且通常會（有人說是一定會）說方言，作為內在已發生了的經驗的外在印記。既然他們相信一個人只有如此才能領受「全部的聖靈」不管他們為這怪異的用詞如何注解），他們給這種經驗神學上的闡述，就是認為這種經驗完成了整個信奉基督的入教過程，一如聖公會會友之間的安立甘大公派理論，水禮只是開始，在堅信禮中領受聖靈才圓滿完成整個入教程式。3
+
+　　最近，鄧恩（James D G． Dunn）、蔔仁納（F．D．Bruner）、史陶德（J．R．W．Stott）和賀其馬（A．A．Hoekema）對這觀點都有全面透徹的剖析，我們在這裏亦無需多費筆墨。我在這裏單提出以下兩點就已經足夠了。首先，若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑：解釋聖靈生活][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+
+
