--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -24,6 +24,7 @@
      - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
+ - [[#6_聖靈的路徑：解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -199,4 +200,17 @@
 
 [[Keep_in_Step_With_the_Spirit__orig.org#恩賜帶來的祝福][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+* 6_聖靈的路徑：解釋聖靈生活
+
+　　對於獨特的靈恩經驗，我們怎樣以神的概念來解釋他呢？一方面可從其中心的信念及倫理上的果子而得出結論，認定神在他們中間，另方面，又發現「靈恩派」和「非靈恩派」的屬靈氣質比我們有時候所在意到的更加相近。倘若靈恩社群中的典型屬靈經驗是沒有基督在其中、沒有愛心和驕傲自負的，那麼，我們的疑問就不會出現。然而我們必需面對一個事實，靈息運動用以解釋其自稱擁有的特色的一個最普遍宣告的神學觀念，是十分不合乎聖經的。
+
+　　沒有任何經驗單憑這經驗的發生本身就可證實是從神而來，一個經驗若是出於神恩典的賜予，他在聖經真理的試驗下，必能證明在其中心有一種加強了的醒覺——對於關乎神的一些啟示的真理的醒覺，以及對於我們作為受造物、罪人、受益人、信徒、養子、被買贖的僕人，及在其他各種身分下與神的關係，有強烈的醒覺。以這個標準去量度靈恩派經驗，發現他們在這一點上沒有缺失。可是，當這些經驗被用來印證某些誤解聖經的信念時，我們就只剩下兩個選擇：一是排斥這些經驗，否則，就重新給他們神學上的闡釋，表明這些經驗實際證實和確定的真理，與靈恩信徒所以為的有所不同。無論如何，我從靈恩經驗裏看見神在其中工作，因此，我大膽作出第二個選擇——就是嘗試重新建構其神學觀念。
+
+　　傳統五旬節派對靈恩經驗的說明，是我曾經稱之為復還論的觀點，他們將使徒行傳第二章所形容門徒在五旬節的經驗，以及哥林多前書十二至十四章所形容哥林多教會的經驗，看為今日基督徒應該追求的標準規範、理想和目標。這經驗一旦臨到，他就被提升，而且通常會說方言，作為內在已發生了的經驗的外在印記。若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑：解釋聖靈生活][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+
 
