--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -25,7 +25,7 @@
      - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
- - [[#6_聖靈的路徑：解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
+ - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -342,7 +342,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 [[Keep_in_Step_With_the_Spirit__notes.org#恩賜帶來的祝福][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
-* 6_聖靈的路徑：解釋聖靈生活
+* 6_聖靈的路徑_解釋聖靈生活
 
 　　現在，我們來到一個主要的問題，是我們一直為他開山辟路的。對於獨特的靈恩經驗，我們應該以怎樣的神學觀點去看他呢？即是說，我們怎樣以神的概念來解釋他呢？當他們自稱他們的屬靈經驗比其他人更加超越的時候，我們應該怎樣看聖靈在他們身上的作為呢？事實上，這是靈恩運動向我們提出的一個主要問題。可是，我一方面可從其中心的信念及倫理上的果子而得出結論，認定神在他們中間，另方面，又發現「靈恩派」和「非靈恩派」的屬靈氣質比我們有時候所在意到的更加相近；這樣，我令到這個問題更加難以解答。倘若靈恩社群中的典型屬靈經驗是沒有基督在其中、沒有愛心和驕傲自負的，那麼，我們的疑問就不會出現，因為我們根本沒有理由將這些經驗歸功於聖靈；可是靈恩運動的情況正好並非這樣，那麼，這個問題就來得更加尖銳，且無法逃避了。因為我們必需面對一個事實，靈息運動用以解釋其自稱擁有的特色的一個最普遍宣告的神學觀念，是十分不合乎聖經的。
 
@@ -354,7 +354,7 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 
 　　最近，鄧恩（James D G． Dunn）、蔔仁納（F．D．Bruner）、史陶德（J．R．W．Stott）和賀其馬（A．A．Hoekema）對這觀點都有全面透徹的剖析，我們在這裏亦無需多費筆墨。我在這裏單提出以下兩點就已經足夠了。首先，若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑：解釋聖靈生活][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑_解釋聖靈生活][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 
