--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -24,7 +24,7 @@
      - [[#什麼是屬靈恩賜][什麼是屬靈恩賜]]
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
- - [[#6_聖靈的路徑：解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
+ - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -201,7 +201,7 @@
 [[Keep_in_Step_With_the_Spirit__orig.org#恩賜帶來的祝福][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
-* 6_聖靈的路徑：解釋聖靈生活
+* 6_聖靈的路徑_解釋聖靈生活
 
 　　對於獨特的靈恩經驗，我們怎樣以神的概念來解釋他呢？一方面可從其中心的信念及倫理上的果子而得出結論，認定神在他們中間，另方面，又發現「靈恩派」和「非靈恩派」的屬靈氣質比我們有時候所在意到的更加相近。倘若靈恩社群中的典型屬靈經驗是沒有基督在其中、沒有愛心和驕傲自負的，那麼，我們的疑問就不會出現。然而我們必需面對一個事實，靈息運動用以解釋其自稱擁有的特色的一個最普遍宣告的神學觀念，是十分不合乎聖經的。
 
@@ -209,7 +209,7 @@
 
 　　傳統五旬節派對靈恩經驗的說明，是我曾經稱之為復還論的觀點，他們將使徒行傳第二章所形容門徒在五旬節的經驗，以及哥林多前書十二至十四章所形容哥林多教會的經驗，看為今日基督徒應該追求的標準規範、理想和目標。這經驗一旦臨到，他就被提升，而且通常會說方言，作為內在已發生了的經驗的外在印記。若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑：解釋聖靈生活][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑_解釋聖靈生活][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 
