--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -209,8 +209,8 @@
 
 　　傳統五旬節派對靈恩經驗的說明，是我曾經稱之為復還論的觀點，他們將使徒行傳第二章所形容門徒在五旬節的經驗，以及哥林多前書十二至十四章所形容哥林多教會的經驗，看為今日基督徒應該追求的標準規範、理想和目標。這經驗一旦臨到，他就被提升，而且通常會說方言，作為內在已發生了的經驗的外在印記。若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
 
-[[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑_解釋聖靈生活][摘要連結]]　　　
-[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+[[Keep_in_Step_With_the_Spirit__orig.org#6_聖靈的路徑_解釋聖靈生活][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 
 
