--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -26,6 +26,7 @@
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
+     - [[#翻方言][翻方言]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -357,5 +358,18 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 [[Keep_in_Step_With_the_Spirit__notes.org#6_聖靈的路徑_解釋聖靈生活][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
+** 翻方言
+　　在我來看，有關翻方言這問題，似乎是最莫衷一是的。翻方言就是將所說方言的訊息內容（一如他們自己所聲稱的）宣佈出來。復還論引導我們將說方言及翻方言與哥林多教會的方言（charismata）等同。保羅給「翻」方言的用字是 diermeneuo（林前一二30，一四 5、13、27），可以指到解釋任何不明白的事情（一如路二四 27 所載的）；這辭彙與語言連結起來很自然是指到把字句本身蘊含的意思翻譯出來（一如徒九 36 所載）。從保羅的話看來，他顯然認為哥林多信徒的方言是帶有可翻出來的意義的（—四 19-13），而今天的翻方言者對今天的方言亦有相同的假設，把他們對方言的解釋視為方言的實際翻譯。
+
+　　然而，他們的表現是令人因惑的。那些流暢、肯定而又自然流露出來的解釋，後來卻被證實是千篇一律、含糊不清和無所傳達的。其中造成了許多荒誕的錯誤。喬達（Kildahl）告訴我們非洲土話主禱文如何被翻為主再來的訊息。27 一位我曾教導過的埃塞俄比亞牧師，參加一個說方言的聚會，他誤以為是一個非正式的多種語言讚美崇拜會，於是，他站起來用基茲話（ Ge’ez，譯者注：一種已廢的閃族語，今用於埃塞俄比亞基督徒的禱文中。）背誦詩篇第二十三篇，這是他出生的科普替族（Coptic）崇拜時用的古老語言；他的背誦立刻被當眾翻譯出來。翌日，他憂愁困惑地告訴我：「全都翻錯了。」喬達也報導過一件事，同一段方言錄音經兩個不同的人翻譯，其中一個翻為「為一份新工作尋求引導」的禱告，另一個則翻為「為一次嚴重大病最近康復而獻上的感恩」。當告訴翻方言的人兩種解釋有出入時，「那翻譯者毫不遲疑，亦不自辯地說神給予一個翻譯者一種翻譯，又給予另一個翻譯者另一種翻譯。」 28 那翻方言者的經驗是，「方言的解釋」是即時浮現腦海的，換句話說，聽見方言之後，那些即時深印腦海的思想就視為那段方言的解釋。他們宣稱神直接賜予翻譯的內容；就好像靈恩派的預言一樣，他們持相類似的宣稱，只要該預言是合乎聖經的話，他就可以成立，不能修改，因為他是無從驗證的。我們可以看出一個翻方言的人——尤其是一開始就滿腦袋儲存了許多聖經真理的人——如何能夠藉著與講者、或講者的聲線語調、或聚會的氣氛共嗚感應而產生恰當並造就人的「解釋」。可是，至於這些解釋如何能夠直接表達所剛剛聽到的聲音的意義，以致實際上將一種不明白的言語翻譯為一種能明白的言語，那就難以理解了。
+
+　　我不會妄自憑幾句翻譯錯誤的例子作為基礎，去全盤否定所有方言的解釋，看他們為虛妄的，同時，我同意撒瑪連（Samarin）的意見，他認為說方言加上翻方言的宗教儀式所產生的團結友愛本身可以是有價值的。 29 但我想，因此就假設我們已重獲保羅所說的翻方言恩賜，卻是十分危險的。無他，事實的證據委實太不肯定了。
+
+　　賀其馬提出當說方言帶來祝福的時候，祝福的源頭「並不是方言本身，而是說方言時候的心境，或者說……在方言說出之先，一顆尋求更多被聖靈充滿的心。」 30 這個意見似乎比任何認為現時人所說的方言，在思想暫時停止活動的情況下，這方言本身能造就人的說法來得實在。同樣，翻方言也可以帶來祝福，是由於他傳達了聖經的激勵，而不一定像一些人的想法，認為這些必然是神所賜方言的神授解釋，就如當日在哥林多教會裏被翻出來的方言可能是神授的一樣。
+
+　　走筆至此，我們必需就醫治和說預言提出一些反問。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#翻方言][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 
