--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -25,6 +25,7 @@
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
+     - [[#翻方言][翻方言]]
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -210,6 +211,16 @@
 　　傳統五旬節派對靈恩經驗的說明，是我曾經稱之為復還論的觀點，他們將使徒行傳第二章所形容門徒在五旬節的經驗，以及哥林多前書十二至十四章所形容哥林多教會的經驗，看為今日基督徒應該追求的標準規範、理想和目標。這經驗一旦臨到，他就被提升，而且通常會說方言，作為內在已發生了的經驗的外在印記。若我們接受上述的觀點，這觀點會迫使我們評價非靈恩派基督教——即是，那些不認識或不尋求悔改後聖靈施洗的基督教信仰——為低下門徑、次等，並欠缺了一些重要的東西；可是，其次，這觀點不能從聖經中成立，因為這觀點不能前後貫徹地解答一些從聖經引伸出來的反問，例如以下三條問題。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#6_聖靈的路徑_解釋聖靈生活][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+** 翻方言
+　　在我來看，有關翻方言這問題，似乎是最莫衷一是的。從保羅的話看來，他顯然認為哥林多信徒的方言是帶有可翻出來的意義的（—四 19-13），而今天的翻方言者對今天的方言亦有相同的假設，把他們對方言的解釋視為方言的實際翻譯。
+
+　　那些流暢、肯定而又自然流露出來的解釋，後來卻被證實是千篇一律、含糊不清和無所傳達的。我不會妄自憑幾句翻譯錯誤的例子作為基礎，去全盤否定所有方言的解釋，看他們為虛妄的，同時，我同意撒瑪連（Samarin）的意見，他認為說方言加上翻方言的宗教儀式所產生的團結友愛本身可以是有價值的。 29 但我想，因此就假設我們已重獲保羅所說的翻方言恩賜，卻是十分危險的。無他，事實的證據委實太不肯定了。
+
+　　賀其馬提出當說方言帶來祝福的時候，祝福的源頭「並不是方言本身，而是說方言時候的心境，或者說……在方言說出之先，一顆尋求更多被聖靈充滿的心。」 同樣，翻方言也可以帶來祝福，是由於他傳達了聖經的激勵。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#翻方言][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 
