--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -26,6 +26,9 @@
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
      - [[#翻方言][翻方言]]
+     - [[#醫治的恩賜][醫治的恩賜]]
+     - [[#預言的恩賜][預言的恩賜]]
+
 
 * 1 看清楚聖靈
 ** 認識並經歷神
@@ -221,6 +224,32 @@
 　　賀其馬提出當說方言帶來祝福的時候，祝福的源頭「並不是方言本身，而是說方言時候的心境，或者說……在方言說出之先，一顆尋求更多被聖靈充滿的心。」 同樣，翻方言也可以帶來祝福，是由於他傳達了聖經的激勵。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#翻方言][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+** 醫治的恩賜
+　　靈恩派的醫治職事能否令人信服地與哥林多前書第十二章二十八及三十節描述的醫治恩賜等同呢？當然不可以。
+
+　　耶穌和門徒是直接用他們的話或者他們的撫摸來醫治的。然後，病者立即得醫治。身體上的殘缺，以及功能性、徵候的和心理引致身心上的疾病，一概獲得醫治。有時候，他們叫死了多天的人復活。他們醫治一大群人，並且沒有任何記載說他們嘗試醫治而結果失敗的。再者，他們醫治的結果是持久的；沒有任何跡象顯示得醫治者後來舊病復發。對於現今那些為病者禱告的人的職事，他們當中沒有一人有上述如此驕人的成績。
+
+　　在使徒時代，醫治的恩賜比起現今靈恩派信徒看來擁有的醫治恩賜，在本質上是更超越的，這並不等如說在這些人的職事裏，新約時期的醫治恩賜又重新出現。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#醫治的恩賜][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+** 預言的恩賜
+　　「靈恩派的預言能否確實被視為新約表記恩賜的復興？」當然不可以。
+
+　　首先，彼得在五旬節曾經引述約珥的預言，說預言原則上是一項普世性的基督徙活動。
+
+　　第二，先知職事的精髓意味著將啟示的真理應用出來，而不是增加神的啟示。一如舊約先知傳講律法，呼籲以色列人面對神與他們所立的約的順服要求，不然，就要受咒詛，同樣，新約先知傳講福音和信心的生命，看來是為了叫人悔改，造就人和鼓勵人。同理，任何藉言語加強聖經教導，以應用於聽者身上的方式，在今日大概可以正確地稱之為預言。
+
+　　第三，保羅指導信眾在聚會中聽基督徒先知說話時，該「……慎思明辨」（林前一四 29），可見新約裏潛在的普世性預言，並非絕無謬誤，至少也有斟酌的餘地。意思是，我們要用辨識力來聆聽。
+
+　　最後，預言應對人的行為產生的唯一影響，就是驅使人作好心理準備，以迎接預言的應驗，同時也準備好面對預言的不應驗。可是，行動的準則，必須是神啟示的話語和靠這話語管理生命的智慧。
+
+　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#預言的恩賜][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 
