--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -27,6 +27,9 @@
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
      - [[#翻方言][翻方言]]
+     - [[#醫治的恩賜][醫治的恩賜]]
+     - [[#預言的恩賜][預言的恩賜]]
+
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -370,6 +373,34 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　走筆至此，我們必需就醫治和說預言提出一些反問。
 
 [[Keep_in_Step_With_the_Spirit__notes.org#翻方言][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+** 醫治的恩賜
+　　靈恩派的醫治職事能否令人信服地與哥林多前書第十二章二十八及三十節描述的醫治恩賜等同呢？當然不可以。
+
+　　使徒時期教會醫治恩賜的典範只能夠是屬乎使徒擁有的醫治恩賜，而耶穌自己的醫治職事就是他們的典範。可是，耶穌和門徒是直接用他們的話（太八 5 一 13，九 6、7；約四 46 一 53；徒九 34）或者他們的撫摸（可一 41，五 25—34；徒二八 8）來醫治的。然後，病者立即得醫治（太八 13；可五 29；路六 10，一七 14；約五 9；徒三 7；有一次分兩階段進行醫治，每階段的效果是即時的，可七 32—35）。身體上的殘缺（例如跛子、瘸子），以及功能性、徵候的和心理引致身心上的疾病（徒三 2 一 10；路六 8—10；約九），一概獲得醫治。有時候，他們叫死了多天的人復活（路七 11—15，八 49—55；約—一 1 一 44；徒九 36—41）。他們醫治一大群人（路四 40，七 21；太四 23、24；徒五12—16，二八 19），並且沒有任何記載說他們嘗試醫治而結果失敗的（除卻有一次門徒忽略了禱告，要由耶穌接替他們進行醫治「可九 17—29」）。再者，他們醫治的結果是持久的；沒有任何跡象顯示得醫治者後來舊病復發。對於現今五旬節派及靈恩派醫者的職事，以及那些為病者禱告的人的職事，無論人如何說他們有神特別的呼召，他們當中沒有一人有上述如此驕人的成績。
+
+　　所以，我們不能像某些人有時候的想法一樣，假設現今靈恩派醫治的能源一定就是保羅在哥林多前書十二章二十八節所講述的。在使徒時代，醫治的恩賜比起現今靈恩派信徒看來擁有的醫治恩賜，在本質上是更超越的。我們頂多可以說，靈恩派醫者有時候並在某些方面可以表現得像新約時代有恩賜的醫者一樣，而每次這樣的場合都印證了神的觸摸仍然具有他自遠古以來的能力。可是，這並不等如說在這些人的職事裏，新約時期的醫治恩賜又重新出現。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#醫治的恩賜][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+** 預言的恩賜
+　　「靈恩派的預言能否確實被視為新約表記恩賜的復興？」當然不可以。
+
+　　我提到的預言是指領受和傳達那聲言是神的訊息的東西。預言是靈恩派團契一項固定的特徵。一般對於預言的信念是（1）直接從神而來有關神的心思的啟示，在別處是無法知曉的；（2）預言經常包括神對未來計畫的特殊指引；（3）預言的正確口述形式等同舊約時代神的曉諭，那說話者通常是神自己；和（4）預言是使徒教會的一個表記恩賜，與其他的表記恩賜一樣，自教父時代中期至二十世紀，在教會中是暫時失效的。可是這一切信念都很值得懷疑。
+
+　　首先，彼得在五旬節曾經引述約珥的預言，指出普世性的預言為聖靈時代的一個記號（徒二 17—21）。因此，當時說預言是一項所有信徒都能夠參與，並且也許期望去分享的活動（參徒一九 6；林前一四 1、23—25）；固然，看來也並非所有信徒都可以恰當地稱為先知（林前二 29），大概因為他們在預言職事上的參與太過斷斷續續。可是，既然說預言原則上是一項普世性的基督徙活動，那麼，我們既不應以為說預言只限于使徒時代，更不應該以為說預言會在任何一個時代消失，所以，對於那些假設預言已大多數不存在於教會生活中的理論，我們理應存疑。
+
+　　第二，雖然個別的先知在主前和主後間或被聖靈感動說出未來的事（參太二四 15：徒—一 28，二一 10、11；彼前一 10 一 12；啟一 3，二二 18），先知職事的精髓卻在乎宣告神此時此刻要向他子民說的話，通常這意味著將啟示的真理應用出來，而不是增加神的啟示。一如舊約先知傳講律法，呼籲以色列人面對神與他們所立的約的順服要求，他們若依約順服，就能得著所應許的祝福，不然，就要受咒詛，同樣，新約先知傳講福音和信心的生命，看來是為了叫人悔改，造就人和鼓勵人（參林前一四 3、24、25；徒一五 32）。保羅願望整個哥林多教會都能分享這個職事（林前一四 1、5）。因此，一個很自然的假定，就是在一般情況下，（縱非每時每刻，也肯定有些時候是如此，）先知的「啟示」（林前一四 26、30）是一種由神引發的真理應用，一般而言，這真理早已啟示出來，而不是揭露一些以前從末知道，亦無法從其他途徑知道的有關神的思想和意願。由此推論，同理，任何藉言語加強聖經教導，以應用於聽者身上的方式，在今日大概可以正確地稱之為預言，因為本質上這確實就是預言了。
+
+　　第三，保羅指導信眾在聚會中聽基督徒先知說話時，該「……慎思明辨」（林前一四 29），可見新約裏潛在的普世性預言，並非絕無謬誤、不容修改的，即使未至於需要實在地予以更正，至少也有斟酌的餘地。新約先知藉語言形式傳達他們的訊息時，聖經上沒有任何指示說他們以天父或聖子的角色自居。愛基遜（ Dayid Atkinson）說：「今日在靈恩派聚會中說預言常以單數第一人稱來發言，……這看來不是說預言的要素，而是一種次文化發展出來的習性。……先知訊息的權威不在其形式，而在乎其內容，像靈恩派採用的那種形式，只會使人更難於慎思明辨。」。32 愛基遜的話實在很真確。對於不屬聖經正典的預言，正正由於我們無法保證其內容的充分表達和思想的完全正確，他們必需受到試驗，意思是，我們要用辨識力來聆聽。因此，某些人的觀念，那認為聖經正典裏神直接說話的預言形式，也必須重現于現今教會那衍生自昔日預言、非無誤又不屬正典的預言裏的看法，似乎是混洧和錯誤的。
+
+　　最後，當靈恩派先知預言未來的事情，用單數第一人稱的措辭表達，一如這預告本身是神直接的宣稱時，單純從他們語言表達的形式，或者單從發出預言這個行動本身去推論預言內容的真確性，肯定是一種錯誤。舊約提供的一個可以恒久應用的聖經準則，就是一如所有假定的預言的教義內容必須受考驗（參申一三 l—3），預言的真確與否，就必須看他們是否應驗（申一八 22）。這些預言應對人的行為產生的唯一影響，就是驅使人作好心理準備，以迎接預言的應驗，同時也準備好面對預言的不應驗。可是，行動的準則，必須是神啟示的話語和靠這話語管理生命的智慧（參申二九 29；箴一至九章）；我們不要隨便相信自封為先知的人那些很可能誤導人的預言。（寫到這裏，不禁令我聯想起在我身上發生的一件事。一九七九年，當時有一位相當誠懇的靈恩派先知規勸我，他說神並不是像我心裏認定的要引導我到溫哥華寫作，而是要我在城市教會內帶領基督徒渡過一段大分裂的時期。嗨，似乎今天的教會一如一九七九年的模樣，而我呢？此刻正坐在這裏寫這本書。）
+
+　　我們不應以為預言是久已作古的第一世紀恩賜，今天復蘇過來，因而在語言表達形式上以盛裝出場，使他與十八、十九世紀以還所有其他基督教溝通的形式分別出來；肯定說，恰當的結論反而是我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。傳講訊息就是教導神的真理，並加以應用，這種具備應用實踐的教導就是預言，以前如此，將來也是如此。今天在靈恩派信徒中間宣講的預言，並不比任何時間其他任何團體所宣講的更加優勝，過去、現在、將來也是如此。有些人在宣講之前沒有默想，採用第一身單數表達，其文法猶如是神自己直接宣告，把聖經真理應用在各種處境和不同的人身上，又為發生了的事情歡喜慶賀，同時瞻望未來要發生的一切。無可置疑，神也曾在這個時代，藉著這一切祝福那講的和那聽的人。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#預言的恩賜][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 
