--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -28,6 +28,7 @@
      - [[#翻方言][翻方言]]
      - [[#醫治的恩賜][醫治的恩賜]]
      - [[#預言的恩賜][預言的恩賜]]
+     - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
 
 
 * 1 看清楚聖靈
@@ -250,6 +251,14 @@
 　　我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#預言的恩賜][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+** 對複還論神學思想的裁決
+　　我們不能憑以上任何證據，而叫人信服地總結說，新約原初的靈恩經驗，消失了一段長時間之後，已經原原本本的再次賜給教會了。亦無需對以下可能根本沒有答案的問題表達意見，就是到底神在使徒職事完結之後，撤回所謂表記恩賜，是否代表他在任何情況底下都不會把這恩賜恢復呢？
+
+　　如果團體相信，標準的信徒經驗應該以使徒行傳第二章使徒的經驗為典範，對神自己、他在基督裏的愛和他賜予的能力（聖靈的膏抹）有一種更深的體會，並得著說方言的能力，那麼，團體的成員肯定會追尋且「尋獲」這種經驗。
+
+[[Keep_in_Step_With_the_Spirit__orig.org#對複還論神學思想的裁決][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 
