--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -29,6 +29,7 @@
      - [[#翻方言][翻方言]]
      - [[#醫治的恩賜][醫治的恩賜]]
      - [[#預言的恩賜][預言的恩賜]]
+     - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
 
 
 * 1_看清楚聖靈
@@ -401,6 +402,18 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　我們不應以為預言是久已作古的第一世紀恩賜，今天復蘇過來，因而在語言表達形式上以盛裝出場，使他與十八、十九世紀以還所有其他基督教溝通的形式分別出來；肯定說，恰當的結論反而是我們應該明白到其實自有教會以來，預言一直不斷展現在每一篇發人深省，並切合聽眾需要的講章或非正式的「訊息」內。不論何時何地，只要聖經真理被真誠地傳講出來——意思是，真理被講解、詮釋和應用，不論是在講壇上或是非正式的分享——，就已經是預言了。傳講訊息就是教導神的真理，並加以應用，這種具備應用實踐的教導就是預言，以前如此，將來也是如此。今天在靈恩派信徒中間宣講的預言，並不比任何時間其他任何團體所宣講的更加優勝，過去、現在、將來也是如此。有些人在宣講之前沒有默想，採用第一身單數表達，其文法猶如是神自己直接宣告，把聖經真理應用在各種處境和不同的人身上，又為發生了的事情歡喜慶賀，同時瞻望未來要發生的一切。無可置疑，神也曾在這個時代，藉著這一切祝福那講的和那聽的人。然而，為此以為這種表現本質上與基督徒一貫為人所熟悉的（正式與非正式的）鼓勵和勸誡截然不同，從而把他認定為新約表記恩賜在今天的復蘇，這樣的想法是不正確的。
 
 [[Keep_in_Step_With_the_Spirit__notes.org#預言的恩賜][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+** 對複還論神學思想的裁決
+　　上述提到的七條問題，其中最重要的字眼是令人信服。對於上述問題的種種肯定和否定論說，都曾經有人提出過，這不是現在我們要談論的。我想指出的是這種種論據到目前為止還未有足夠的說服力使他們貫串有力，而且似乎亦永不會變為可信服的了。誠然，靈恩派信徒（也包括其他非靈恩派的信徒）所經歷神的眷佑和神工作的彰顯，在某些方面來說，相當於使徒的神跡、醫治、說方言，以及（頗成疑問的）翻方言；在使徒時代，這些恩賜印證使徒能力的來源，表彰他們所傳揚的基督（參林後一二 12；羅一五15—19；來二 3、4；和使徒行傳的記述）。誠然，在整個靈恩派圈內圈外，在整個教會歷史以還，確有「第二次祝福」和聖靈的膏抹臨到信徒，而這些恩賜在某些方面來說，確與五旬節經驗相似。34 可是，我們不能憑以上任何證據，而叫人信服地總結說，新約原初的靈恩經驗，消失了一段長時間之後，已經原原本本的再次賜給教會了。
+
+　　我們無需否認，自從第一世紀末期，在不同的教會傳統中，一些基督徒屬靈方面的進深經驗，可能在感覺上很像使徒們五旬節的經驗；我們所需要注意的，反而是新約神學禁止我們用五旬節的經驗去解釋信徒這些經驗，或者將任何悔改以外的經驗，解釋為領受那正充分發揮其新約職事的基督的靈。我們亦無需對以下可能根本沒有答案的問題表達意見，就是到底神在使徒職事完結之後，撤回所謂表記恩賜，是否代表他在任何情況底下都不會把這恩賜恢復呢？我們只需要觀察，儘管與一些靈恩派信徒所宣稱的相反，事實上到如今這些恩賜還未曾真正恢復過。一言以蔽之，很明顯以複還論作為解釋靈恩經驗的神學理論是行不通的，倘若我們想明辨神在這個運動之中有何作為，我們必需循其他方向去思想。
+
+　　這裏，我還想加多一個短評。要評價靈恩派現象，我們需要記得的，就是團體信念塑造團體期望，團體期望塑造個人經驗。一個具備導師和著作文獻的團體，很容易模造其成員的思想和經驗，而且模造的程度可以是十分驚人的。具體來說，例如團體相信，標準的信徒經驗應該以使徒行傳第二章使徒的經驗為典範，對神自己、他在基督裏的愛和他賜予的能力（聖靈的膏抹）有一種更深的體會，並得著說方言的能力，那麼，團體的成員肯定會追尋且「尋獲」這種經驗。這經驗也不會單單由於某些錯誤的觀念黏附其上，而必然地成為一種誤導的、沒有聖靈在其中的、自我衍生的經驗。正如我們一直所體會的，神是滿有恩慈的，他祝福那尋求他的人，即使他們的觀念未必完全正確。可是，我們必須以這種經驗為一種受期望塑造的經驗來試驗他，而那塑造經驗的期望亦要分開來接受考驗，去看他們是否合乎神所啟示的真理。故此，同理，若然人們期望從神而來的訊息應以某個特定風格傳遞，那麼，不論正典式預言復蘇這個意念是否有聖經根據，這種傳遞方式肯定會應運而生；然後，在每一次個別的情況，我們都需要試驗訊息的內容，這種試驗與就塑造傳遞過程的期望而作的評斷是很不相同的，兩者不能混為一談。
+
+　　讓我重申：我從沒有表示過這些受期望塑造的經驗是沒有屬靈實質的。我唯一希望指出的，是複還論者的宣稱（他們期望的基礎）是經不起考驗的，我們需要另一套神學理論去闡述聖靈的工作。我想，這一點我已經很清楚詳盡地證實了，因此，我會繼續寫下去。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#對複還論神學思想的裁決][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
 
