--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -25,10 +25,12 @@
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
-     - [[#翻方言][翻方言]]
-     - [[#醫治的恩賜][醫治的恩賜]]
-     - [[#預言的恩賜][預言的恩賜]]
-     - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
+   - [[#翻方言][翻方言]]
+   - [[#醫治的恩賜][醫治的恩賜]]
+   - [[#預言的恩賜][預言的恩賜]]
+   - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
+   - [[#另一套神學理論][另一套神學理論]]
+     - [[#說方言][說方言]]
 
 
 * 1 看清楚聖靈
@@ -259,6 +261,18 @@
 　　如果團體相信，標準的信徒經驗應該以使徒行傳第二章使徒的經驗為典範，對神自己、他在基督裏的愛和他賜予的能力（聖靈的膏抹）有一種更深的體會，並得著說方言的能力，那麼，團體的成員肯定會追尋且「尋獲」這種經驗。
 
 [[Keep_in_Step_With_the_Spirit__orig.org#對複還論神學思想的裁決][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+** 另一套神學理論
+
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
+
+*** 說方言
+　　成聖過程的整體楷模，必然包括平穩地恢復人在完全自覺、理性的控制能力下，達致人格完全的統合。當我們更深地表現出聖經所說的誠懇、純一、專心一志等質素時，我們就更能控制自己。
+
+　　聖靈可能要透過這種表面上理性控制的鬆懈，去強化信徒更深層面的自製能力；心煩意亂的人，浸在浴缸裏，大聲哼無字句內容的歌，有助恢復健全的理性。若然說方言的效果真的為要加劇讚美及禱告的情緒，並使這些情緒持續，那麼，說方言可以幫助培養正面的性格，引領人進入密契禱告（ mystical prayer）宣導者所稱的默觀（contemplation）裏。（可是，對其他擁有不同問題的人來說，神已經幫助他們自心裏向神發出通達的禱告，說方言對他們來說，遂變為不屬靈、瑣碎和不著邊際了）
+
+[[Keep_in_Step_With_the_Spirit__orig.org#說方言][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
 
