--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -26,10 +26,12 @@
      - [[#屬靈恩賜的運用][屬靈恩賜的運用]]
      - [[#恩賜帶來的祝福][恩賜帶來的祝福]]
  - [[#6_聖靈的路徑_解釋聖靈生活][6_聖靈的路徑：解釋聖靈生活]]
-     - [[#翻方言][翻方言]]
-     - [[#醫治的恩賜][醫治的恩賜]]
-     - [[#預言的恩賜][預言的恩賜]]
-     - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
+   - [[#翻方言][翻方言]]
+   - [[#醫治的恩賜][醫治的恩賜]]
+   - [[#預言的恩賜][預言的恩賜]]
+   - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
+   - [[#另一套神學理論][另一套神學理論]]
+     - [[#說方言][說方言]]
 
 
 * 1_看清楚聖靈
@@ -416,4 +418,19 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 [[Keep_in_Step_With_the_Spirit__notes.org#對複還論神學思想的裁決][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
+** 另一套神學理論
+
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+*** 說方言
+　　那麼，我們對說方言有什麼看法呢？我們看見現今說方言的人，他們能夠保留那種情緒，思想卻休假去了，因此我們不能根據任何觀點，信心十足地認定他們的表現等同於新約時代的方言。在這種理解底下，人們經常極力主張的，就是既然神的目標是要人在完全自覺、理性的控制能力下，達致人格完全的統合，那麼，成聖過程的整體楷模，必然包括平穩地恢復這種控制能力。當我們更深地表現出聖經所說的誠懇、純一、專心一志等質素時，我們就更能控制自己，同時在我所行的一切事上，我心中「只有一件事……」（腓三 13；另參林後—一 3；雅一 7、8）既然是這樣（按照推論是如此），我們就再沒有說方言的必要，因為說方言的時候，人放棄了對聲帶理性的控制。然而，一個雙重的回答可能合適。
+
+　　首先，既然靈恩派信徒故意選擇說方言作為一種傳達工具，去表達他們心中就某些主題要向神獻上的崇敬和祈求，藉此向神多說一些他無法用語言表達的心事，若然我們聲稱他們完全缺乏理性的控制，是不很真確的。
+
+　　其次，聖靈可能要透過這種表面上理性控制的鬆懈，去強化信徒更深層面的自製能力；這種見解並非不可思議。心煩意亂的人，浸在浴缸裏，大聲哼無字句內容的歌，有助恢復健全的理性；說方言可能在屬靈方面就有著相同的意義。倘真如此的話，那麼說方言的確是神的奇妙恩賜。並且，若然說方言的效果真的為要加劇讚美及禱告的情緒，並使這些情緒持續，以免因思想的魂遊象外而無法維持，那麼，說方言可以幫助培養正面的性格，引領人進入密契禱告（ mystical prayer）宣導者所稱的默觀（contemplation）裏。這種操練對於某一類人可能尤其有益，由於現代生活匆忙、浮面、脆弱而不真實，許多人成為這種生活的受害者，無法在更深層面與他們的自我接觸，於是，他們的基督教變成形式化、概念性、隨俗、定型、抄襲和二手的信仰。（畢竟，靈恩運動主要是一種都市現象，而在城市裏面，這些壓力對人有最直接的影響。）
+
+　　這樣看來，起碼對某些人來說，說方言可以是神的美善恩賜；這是基於一個觀念，就是任何能夠幫助人專注神、體驗他的同在，並使人敞開心靈讓神影響的東西，都是美善的恩賜。（可是，對其他擁有不同問題的人來說，神已經幫助他們自心裏向神發出通達的禱告，說方言對他們來說，遂變為不屬靈、瑣碎和不著邊際了；現時有些人對於不論何處出現的方言都持這種看法。這就是正所謂一人的佳餚可能是另一人的毒藥了。）
+
+[[Keep_in_Step_With_the_Spirit__notes.org#說方言][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
