--- a/Keep_in_Step_With_the_Spirit__orig.org
+++ b/Keep_in_Step_With_the_Spirit__orig.org
@@ -32,7 +32,8 @@
    - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
    - [[#另一套神學理論][另一套神學理論]]
      - [[#說方言][說方言]]
-
+   - [[#結論][結論]]
+     - [[#4_說方言][4_說方言]]
 
 * 1_看清楚聖靈
 ** 蒙眼症
@@ -432,5 +433,12 @@ J．C．Pollock，The Keswick Story：The Authorized History of the KeswickConve
 　　這樣看來，起碼對某些人來說，說方言可以是神的美善恩賜；這是基於一個觀念，就是任何能夠幫助人專注神、體驗他的同在，並使人敞開心靈讓神影響的東西，都是美善的恩賜。（可是，對其他擁有不同問題的人來說，神已經幫助他們自心裏向神發出通達的禱告，說方言對他們來說，遂變為不屬靈、瑣碎和不著邊際了；現時有些人對於不論何處出現的方言都持這種看法。這就是正所謂一人的佳餚可能是另一人的毒藥了。）
 
 [[Keep_in_Step_With_the_Spirit__notes.org#說方言][摘要連結]]　　　
+[[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
+
+** 結論
+*** 4_說方言
+　　靈恩派方言，作為一種經選擇的、在神面前非語言的自我表達方式（所謂經選擇，在他們的信念裏，是神的旨意叫人這樣選擇的），在無可避免地多樣化的基督徒經驗裏自有他的地位；而在基督徒經驗中，種類繁多的靈修方式，正好反映了文化與個人的不同構造和特質。似乎看來很明顯的，就是說方言作為一種屬靈操練，的確豐富了一些人的屬靈生命，但對別的人來說，卻是毫無價值的不敬虔表現。有些人嘗試這樣操練，及後見證說發現自己所做的毫無屬靈實質，然而另有些人開始了這種操練後，結果卻經歷與神更深的相交；我們無理由懷疑他們任何一方面的見證。用方言禱告可以幫助一些過分理智的人釋放和解凍情感，正如結構分明、用言語清楚表達的禱文可以幫助一些過分感性的人穩定情緒、弄清思想。那些認識到說方言並非神為他們預備的道路的人，以及另外一些體驗過說方言豐富了他們的屬靈生命的人，都不應該將自己的方式強加於別人身上，也不應該因為別人與自己不同而貶抑他人遜於自己，同時若然在自己的陣營中有人因著相信是神的帶領而轉移到對方的陣營之中，亦無需為此信心動搖。用方言禱告及不用方言禱告的人都同是向主禱告；他們或站立或跌倒都是向他們的主人交代，並非做給其他僕人看。一如在基督裏面無分猶太人或希臘人、為奴的或自主的、男性或女性，同樣在基督裏亦無分說方言的或不說方言的。即使（正如我所懷疑的，雖然無法證明）今日的說方言者不同于昔日哥林多信徒所說的方言，我們也不應該禁止他們說方言，而說方言者亦不應該認定一級的基督徒必需說方言。
+
+[[Keep_in_Step_With_the_Spirit__notes.org#4_說方言][摘要連結]]　　　
 [[Keep_in_Step_With_the_Spirit__orig.org#目錄][目錄連結]]
 
