--- a/Keep_in_Step_With_the_Spirit__notes.org
+++ b/Keep_in_Step_With_the_Spirit__notes.org
@@ -31,6 +31,8 @@
    - [[#對複還論神學思想的裁決][對複還論神學思想的裁決]]
    - [[#另一套神學理論][另一套神學理論]]
      - [[#說方言][說方言]]
+   - [[#結論][結論]]
+     - [[#4_說方言][4_說方言]]
 
 
 * 1 看清楚聖靈
@@ -270,10 +272,15 @@
 *** 說方言
 　　成聖過程的整體楷模，必然包括平穩地恢復人在完全自覺、理性的控制能力下，達致人格完全的統合。當我們更深地表現出聖經所說的誠懇、純一、專心一志等質素時，我們就更能控制自己。
 
-　　聖靈可能要透過這種表面上理性控制的鬆懈，去強化信徒更深層面的自製能力；心煩意亂的人，浸在浴缸裏，大聲哼無字句內容的歌，有助恢復健全的理性。若然說方言的效果真的為要加劇讚美及禱告的情緒，並使這些情緒持續，那麼，說方言可以幫助培養正面的性格，引領人進入密契禱告（ mystical prayer）宣導者所稱的默觀（contemplation）裏。（可是，對其他擁有不同問題的人來說，神已經幫助他們自心裏向神發出通達的禱告，說方言對他們來說，遂變為不屬靈、瑣碎和不著邊際了）
+　　聖靈可能要透過這種表面上理性控制的鬆懈，去強化信徒更深層面的自製能力；心煩意亂的人，浸在浴缸裏，大聲哼無字句內容的歌，有助恢復健全的理性。若然說方言的效果真的為要加劇讚美及禱告的情緒，並使這些情緒持續，那麼，說方言可以幫助培養正面的性格，引領人進入密契禱告（mystical prayer）宣導者所稱的默觀（contemplation）裏。（可是，對其他擁有不同問題的人來說，神已經幫助他們自心裏向神發出通達的禱告，說方言對他們來說，遂變為不屬靈、瑣碎和不著邊際了）
 
 [[Keep_in_Step_With_the_Spirit__orig.org#說方言][本文連結]]　　　
 [[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
+** 結論
+*** 4_說方言
+　　有些人嘗試說方言這樣操練， 之後見證說發現自己所做的毫無屬靈實質，然而另有些人開始了這種操練後，結果卻經歷與神更深的相交；我們無理由懷疑他們任何一方面的見證。不應該將自己的方式強加於別人身上，也不應該因為別人與自己不同而貶抑他人遜於自己，同時若然在自己的陣營中有人因著相信是神的帶領而轉移到對方的陣營之中，亦無需為此信心動搖。用方言禱告及不用方言禱告的人都同是向主禱告；即使今日的說方言者不同于昔日哥林多信徒所說的方言，我們也不應該禁止他們說方言，而說方言者亦不應該認定好的基督徒必需說方言。
 
+[[Keep_in_Step_With_the_Spirit__orig.org#4_說方言][本文連結]]　　　
+[[Keep_in_Step_With_the_Spirit__notes.org#目錄][目錄連結]]
 
